continuing clean up

--- a/ᏣᎳᎩ.mw
+++ b/ᏣᎳᎩ.mw
@@ -22,14 +22,14 @@
 
 ᎯᎠ ᏓᏂᏍᏇᎵᏲᎬ "ᏣᎳᎩ" ᏥᏄᏍᏛᎩ ᏌᏊ ᎢᏳᏩᎫᏗ ᎤᏬᎯᏳᏅ ᎾᏍᏋ ᎤᏍᏆᎸᎲ ᎯᎠ ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ ᎤᏤᎵ ᏚᏙᎥ, "ᏣᎳᎩ" (ᏣᎳᎩ) - ᎪᎯ ᎾᎯᏳᎢ ᎠᎾᏍᎬᏘ ᎤᎭ ᏭᏪᏙᎢ ᏄᎾᏓᏛᏁᎸ phonetically ᎭᏫᎾᏗᏢ Portuguese (ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏄᏓᎷᎸᎾ ''barranquenho'' ᎦᏬᏂᎯᏍᏗ, ᎣᏂ ᏧᏩᎫᏛ [[ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Soto]] ᏥᏄᏍᏛᎩ [[Extremaduran language|Extremaduran]]) ᏥᏄᏍᏗ ''chalaque'', ᎾᎯᏳᎢ ᎭᏫᎾᏗᏢ ᎠᎦᎸᏥ ᏥᏄᏍᏗ ''cheraqui'', ᎠᎴ ᎾᎯᏳᎢ ᎾᎥᎢ ᎯᎠ ᎩᎵᏏ ᏥᏄᏍᏗ ''ᏣᎳᎩ''.
 
-ᎯᎠ ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᎦᎢ ᎨᏒ ᏂᎦᎵᏍᏗᏍᎬᎫ "r" ᏚᎳᏏᏔᏅᎩ ᏚᏃᏴᎬ, ᎠᎴ ᏥᏄᏍᏗ ᏯᏛᎿ, ᎯᎠ ᎧᏁᏨ "ᏣᎳᎩ" ᎯᎳᎪ ᎢᏳ ᎤᏁᏨᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏬᏂᎯᏍᏗ ᎨᏒᎢ ᎢᏳᏂᏪᏛ ᏥᏄᏍᏗ Ꮳ-ᏂᏚᏍᏛᎢ-Ꭹ (ᎢᎦᏪᏛ Jah-ᏂᏚᏍᏛᎢ-gee ᎠᎴ Cha-ᏂᏚᏍᏛᎢ-gee) ᎾᎥᎢ ᎾᏰᎯᏯ ᎦᏬᏂᏍᎩ, ᎣᏂ ᏧᏩᎫᏛ ᎾᏍᎩ ᎯᎠ ᏚᏃᏴᎬ ᎤᎪᏗᏗ ᎾᎥᏂᎨᎢ ᎾᎥᏂᎨ ᎡᎵᏍᏗ "ᏣᎳᎩ" ᎭᏫᎾᏗᏢ ᎯᎠ ᎾᏰᎯᏯ ᎦᏬᏂᎯᏍᏗ. ᎤᎦᎾᏭ ᎢᏗᏢ ᏣᎳᎩ ᎤᎾᏓᏟᏌᎲ ᏄᏛᏁᎸ ᎧᏁᎬ ᎾᎥᎢ ᎦᏬᏂᎯᏍᏗ ᎬᏙᏗ trilled "r" ᎤᏃᏴᎬ ᎤᎶᏐᏅ ᎢᎬᏱ ᏚᏓᏂᏴᏒ ᎬᏙᏗ Europeans ᎢᏧᎳ ᎠᎦᎸᏥ ᎠᎴ Spanish ᎦᏌᏆᎸ ᎭᏫᎾᏗᏢ [[Georgia|ᏣᏥᏱ]] ᎠᎴ [[Alabama|ᎠᎳᏆᎹ]] ᎾᎯᏳᎨᏒ ᎯᎠ ᎢᎬᏱ 1700s.  ᎯᎠ ᎯᎸᎯᏳᎢ [[ᎠᏂᎫᏔᏂ]] ᎦᏬᏂᎯᏍᏗ ᎠᎴ ᎣᎦᎳᎰᎻ ᎦᏬᏂᎯᏍᏗ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᎦᎢ ᎨᏒ ᏂᎦᎵᏍᏗᏍᎬᎫ 'r' ᏚᎳᏏᏔᏅᎩ ᏚᏃᏴᎬ.
+ᎯᎠ ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᎦᎢ ᎨᏒ ᏂᎦᎵᏍᏗᏍᎬᎫ "r" ᏚᎳᏏᏔᏅᎩ ᏚᏃᏴᎬ, ᎠᎴ ᏥᏄᏍᏗ ᏯᏛᎿ, ᎯᎠ ᎧᏁᏨ "ᏣᎳᎩ" ᎯᎳᎪ ᎢᏳ ᎤᏁᏨᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏬᏂᎯᏍᏗ ᎨᏒᎢ ᎢᏳᏂᏪᏛ ᏥᏄᏍᏗ Ꮳ-ᏂᏚᏍᏛᎢ-Ꭹ (ᎢᎦᏪᏛ Jah-ᏂᏚᏍᏛᎢ-gee ᎠᎴ Cha-ᏂᏚᏍᏛᎢ-gee) ᎾᎥᎢ ᎾᏰᎯᏯ ᎦᏬᏂᏍᎩ, ᎣᏂ ᏧᏩᎫᏛ ᎾᏍᎩ ᎯᎠ ᏚᏃᏴᎬ ᎤᎪᏗᏗ ᎾᎥᏂᎨᎢ ᎾᎥᏂᎨ ᎡᎵᏍᏗ "ᏣᎳᎩ" ᎭᏫᎾᏗᏢ ᎯᎠ ᎾᏰᎯᏯ ᎦᏬᏂᎯᏍᏗ. ᎤᎦᎾᏭ ᎢᏗᏢ ᏣᎳᎩ ᎤᎾᏓᏟᏌᎲ ᏄᏛᏁᎸ ᎧᏁᎬ ᎾᎥᎢ ᎦᏬᏂᎯᏍᏗ ᎬᏙᏗ trilled "r" ᎤᏃᏴᎬ ᎤᎶᏐᏅ ᎢᎬᏱ ᏚᏓᏂᏴᏒ ᎬᏙᏗ Europeans ᎢᏧᎳ ᎠᎦᎸᏥ ᎠᎴ [[Spanish|ᏍᏆᏂ]] ᎦᏌᏆᎸ ᎭᏫᎾᏗᏢ [[Georgia|ᏣᏥᏱ]] ᎠᎴ [[Alabama|ᎠᎳᏆᎹ]] ᎾᎯᏳᎨᏒ ᎯᎠ ᎢᎬᏱ 1700s.  ᎯᎠ ᎯᎸᎯᏳᎢ [[ᎠᏂᎫᏔᏂ]] ᎦᏬᏂᎯᏍᏗ ᎠᎴ ᎣᎦᎳᎰᎻ ᎦᏬᏂᎯᏍᏗ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᎦᎢ ᎨᏒ ᏂᎦᎵᏍᏗᏍᎬᎫ 'r' ᏚᎳᏏᏔᏅᎩ ᏚᏃᏴᎬ.
 
-ᎯᎠ ᎧᏁᏨ "ᏣᎳᎩ" ᎨᏒᎢ derived ᎧᏁᏨ ᎦᏙ ᎤᏍᏗ ᎤᎷᏨᎩ ᎠᎴᏅᏔᏅ ᏂᏛᎴᏅᏓ ᎯᎠ [[Choctaw]] ᏗᏓᏁᏟᏴᎡᏗ ᎦᏬᏂᎯᏍᏗ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ derived ᏂᏛᎴᏅᏓ ᎯᎠ Choctaw ᎧᏁᏨ "Cha-ᏂᏚᏍᏛᎢ-kee" ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ "ᎾᏍᎩ ᎦᎪ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏙᏓᎸ" ᎠᎴ "ᎾᏍᎩ ᎦᎪ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏔᎦᎳᏱ." ᎯᎠ ᏚᏙᎥ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏣᎳᎩ ᎠᎴᏅᏔᏅ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎤᏅᏌ ᎨᏒᎢ ''Ah-Ꮒ-yv-wi-Ꮿ'' (ᏗᏙᎳᎩ ᎠᏁᏢᏔᏅᎯ "ᎾᏍᎩ ᎯᎠ ᎠᎴ ᏂᎦᏛ ᎯᎠ ᏴᏫ ᏴᏫ"). ᎤᎪᏗᏗ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏂᎳᏍᏓᎸ ᎤᎭ ᏚᏙᎥ ᎾᏍᎩᎾᎢ ᎤᏅᏌ ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎾᎥᏂᎨᏍᏙᏗᏇ ᎪᎯ. ᏱᏂᎬᏛᎾ, ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏣᎳᎩ ᎤᏯᏅᏛ ᎤᏅᏌ ᏣᎳᎩ, ᎠᎴ ᏣᎳᎩ.
+ᎯᎠ ᎧᏁᏨ "ᏣᎳᎩ" ᎨᏒᎢ derived ᎧᏁᏨ ᎦᏙ ᎤᏍᏗ ᎤᎷᏨᎩ ᎠᎴᏅᏔᏅ ᏂᏛᎴᏅᏓ ᎯᎠ [[Choctaw|ᎠᏂᏣᏓ]] ᏗᏓᏁᏟᏴᎡᏗ ᎦᏬᏂᎯᏍᏗ. ᎾᏍᎩ ᏥᏄᏍᏛᎩ derived ᏂᏛᎴᏅᏓ ᎯᎠ [[Choctaw|ᎠᏂᏣᏓ]] ᎧᏁᏨ "Cha-ᏂᏚᏍᏛᎢ-kee" ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ "ᎾᏍᎩ ᎦᎪ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏙᏓᎸ" ᎠᎴ "ᎾᏍᎩ ᎦᎪ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏔᎦᎳᏱ." ᎯᎠ ᏚᏙᎥ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏣᎳᎩ ᎠᎴᏅᏔᏅ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎤᏅᏌ ᎨᏒᎢ ''Ah-Ꮒ-yv-wi-Ꮿ'' (ᏗᏙᎳᎩ ᎠᏁᏢᏔᏅᎯ "ᎾᏍᎩ ᎯᎠ ᎠᎴ ᏂᎦᏛ ᎯᎠ ᏴᏫ ᏴᏫ"). ᎤᎪᏗᏗ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏂᎳᏍᏓᎸ ᎤᎭ ᏚᏙᎥ ᎾᏍᎩᎾᎢ ᎤᏅᏌ ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎾᎥᏂᎨᏍᏙᏗᏇ ᎪᎯ. ᏱᏂᎬᏛᎾ, ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏣᎳᎩ ᎤᏯᏅᏛ ᎤᏅᏌ ᏣᎳᎩ, ᎠᎴ ᏣᎳᎩ.
 
 ==ᎦᏬᏂᎯᏍᏗ ᎠᎴ ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ==
 
 [[Image:Sequoyah.jpg|thumb|right|200px|ᏍᏏᏆᏱ]]
-ᎯᎠ ᏣᎳᎩ ᎧᏁᎬ [[Iroquoian languages|Iroquoian]] ᎦᏬᏂᎯᏍᏗ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ [[Polysynthetic language|polysynthetic]] ᎠᎴ ᎨᏒᎢ ᎪᏪᎳᏅᎯ ᎭᏫᎾᏗᏢ [[syllabary]] ᎦᎾᎬᎢ ᎾᎥᎢ [[ᏍᏏᏆᏱ]]. ᎾᏍᎩ ᎨᏒᎢ ᎾᏊ ᎤᏬᎯᏳᏅ Ꮎ ᎤᏟ ᎢᎦᎢ ᎯᎸᎯᏳᎢ Syllabary Ꮎ predated ᏍᏏᏆᏱ ᎠᎴ ᎠᎾᏍᎬᏘ ᎤᎭ ᎤᏓᎵᎦᎵᏍᏔᏅ ᎤᏤᎵ ᎡᏆ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏣᎳᎩ ᏴᏫ ᏥᏄᏍᏛᎩ ᏭᏓᏁᎸᎩ ᎡᎳᏗ ᏗᎬᏩᎶᏒ ᎯᎠ [[Ani Kutani|ᎠᏂ ᎫᏔᏂ]], ᎯᎸᎯᏳᎢ ᏗᎦᎳᏫᏍᏗ ᎯᎠ ᏣᎳᎩ ᏴᏫ.
+ᎯᎠ ᏣᎳᎩ ᎧᏁᎬ [[Iroquoian languages|Iroquoian]] ᎦᏬᏂᎯᏍᏗ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ [[Polysynthetic language|polysynthetic]] ᎠᎴ ᎨᏒᎢ ᎪᏪᎳᏅᎯ ᎭᏫᎾᏗᏢ [[syllabary]] ᎦᎾᎬᎢ ᎾᎥᎢ [[ᏍᏏᏆᏱ]]. ᎾᏍᎩ ᎨᏒᎢ ᎾᏊ ᎤᏬᎯᏳᏅ Ꮎ ᎤᏟ ᎢᎦᎢ ᎯᎸᎯᏳᎢ Syllabary Ꮎ predated ᏍᏏᏆᏱ ᎠᎴ ᎠᎾᏍᎬᏘ ᎤᎭ ᎤᏓᎵᎦᎵᏍᏔᏅ ᎤᏤᎵ ᎡᏆ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᎾᎢ ᎯᎠ ᏣᎳᎩ ᏴᏫ ᏥᏄᏍᏛᎩ ᏭᏓᏁᎸᎩ ᎡᎳᏗ ᏗᎬᏩᎶᏒ ᎯᎠ [[Anikutani|ᎠᏂᎫᏔᏂ]], ᎯᎸᎯᏳᎢ ᏗᎦᎳᏫᏍᏗ ᎯᎠ ᏣᎳᎩ ᏴᏫ.
 
 ᎾᏍᎩᎾᎢ ᏧᏕᏘᏴᏓ, ᎤᎪᏗᏗ ᏴᏫ ᎤᏬᏪᎳᏅ transliterated ᏣᎳᎩ ᎾᎿ ᎯᎠ ᎧᎾᏁᏍ ᎠᎴ ᎬᏔᏅᎯ ᎥᏳᎩ intercompatible ᏂᎬᏂᏏᏍᎬ ᏗᎦᎪᏗ ᎠᏥᏄ ᎪᏫᏍᎬ ᎯᎠ syllabary. ᏱᏂᎬᏛᎾ, ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ ᏰᎵ ᎣᏏ ᎾᏞᎬ ᎦᏟᏐᏗᎩ ᎯᎠ ᏣᎳᎩ ᎩᎶ ᏂᏓᏳᏅᏅ ᎪᏪᎵ [[Unicode/Cherokee|Unicode]], ᎯᎠ ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ ᎨᏒᎢ experiencing ᏅᎪᏢᎯᏐᏗᏱ ᎭᏫᎾᏗᏢ Ꮝ ᎬᏙᏗ ᎾᎿ ᎯᎠ ᎧᎾᏁᏍ. ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᏋ ᎪᏪᎶᏗ, ᏱᏂᎬᏛᎾ, Ꮎ ᏥᏄᏍᏗ ᏕᎭᎷᏱ 2006 ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎣᎦᎳᎰᎻ ᏙᎢ ᎠᏰᎵ ᎤᏒᎧᎵ ᎬᏔᏂᏓᏍᏗ ᎬᏙᏗ-unicode ᏂᎬᏂᏏᏍᎬ ᎾᏍᎩᎾᎢ online ᎪᏪᎵᎬᏂᎨᏒ ᎢᏗᎬᏁᎯ, ᎠᏠᏯᏍᏗᏍᎩ online ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ ᎯᎠ [[ᏣᎳᎩ ᏧᎴᎯᏌᏅᎯ]]. 
 
@@ -76,45 +76,42 @@
 | colspan="2" style="background: #fff6d9;" | <small>*new counting methods used</small>
 |}
 
-ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏥᏄᏍᏛᎩ unified ᏂᏛᎴᏅᏓ ᎤᎾᏙᏢᎯ interrelated ᎦᏚᎲᎢ-ᎧᏃᎮᎭ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎬᏱ 18th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎭᏫᎾᏗᏢ ᎯᎠ "ᏄᎬᏫᏳᏌᏕᎩ" Moytoy, ᎬᏙᏗ ᎯᎠ ᎠᏓᏍᏕᎸᏗ ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ ᎩᎵᏏ ᎠᏂᏙᎯ, ᎠᏍᎦᏯ Alexander Cumming.  ᎭᏫᎾᏗᏢ 1730, ᎤᎬᏫᏳᎯ Moytoy [[Tellico|ᏖᎵᎪ]] ᏥᏄᏍᏛᎩ ᏚᏓᏂᎸᏨ ᎾᏍᏋ ᎯᎠ "ᏄᎬᏫᏳᏌᏕᎩ" ᎾᎥᎢ ᎯᎠ ᎠᏂᏁᎩ ᎤᎬᏫᏳᎯ ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᏣᎳᎩ ᏕᎦᏚᎲ.  Moytoy ᎾᏍᎩ ᎾᏍᏇ ᏚᏓᏂᎸᏨ recognize ᎯᎠ ᎩᎵᏏ ᎤᎬᏫᏳᎯ, George ᎧᏬᎳᏕᏍᎬ, ᏥᏄᏍᏗ ᎯᎠ ᏣᎳᎩ ᎠᎵᏍᏕᎵᏍᎩ.  ᎯᏍᎩ ᏧᏩᎫᏔᏅᏒ ᎪᎯ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ, ᎯᎠ ᏣᎳᎩ ᎠᏰᎲ ᏚᎾᎵᎸ ᏓᏄᏩ ᎬᏙᏗ ᎤᎦᎾᏭ Carolina ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᏧᏕᏘᏴᏓ.  ᎯᎠ ᎦᏓ ᎦᏂᏴᏙ ᏣᎳᎩ ᏄᎬᏫᏳᏌᏕᎩ, ᏱᏂᎬᏛᎾ, ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏫᏛᏗ ᎤᏣᏘ ᎦᏙᎳ Ꮿ ᏄᎾᏛᏅ ᎯᎠ ᏣᎳᎩ, ᎠᎴ ᎯᎠ ᎦᏓ ᎦᏂᏴᏙ ᏭᎵᏱᎶᎸ ᎤᎶᏒᎩ atsinuqowisgv Moytoy ᎤᏤᎵ ᎠᏓᏎᎮᏗ avuncular ᏚᎾᏓᏚᏓᎸ.   
+ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏥᏄᏍᏛᎩ unified ᏂᏛᎴᏅᏓ ᎤᎾᏙᏢᎯ interrelated ᎦᏚᎲᎢ-ᎧᏃᎮᎭ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎬᏱ 18th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎭᏫᎾᏗᏢ ᎯᎠ "ᏄᎬᏫᏳᏌᏕᎩ" Moytoy, ᎬᏙᏗ ᎯᎠ ᎠᏓᏍᏕᎸᏗ ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ ᎩᎵᏏ ᎠᏂᏙᎯ, ᎠᏍᎦᏯ Alexander Cumming.  ᎭᏫᎾᏗᏢ 1730, ᎤᎬᏫᏳᎯ Moytoy [[Tellico|ᏖᎵᎪ]] ᏥᏄᏍᏛᎩ ᏚᏓᏂᎸᏨ ᎾᏍᏋ ᎯᎠ "ᏄᎬᏫᏳᏌᏕᎩ" ᎾᎥᎢ ᎯᎠ ᎠᏂᏁᎩ ᎤᎬᏫᏳᎯ ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᏣᎳᎩ ᏕᎦᏚᎲ. Moytoy ᎾᏍᎩ ᎾᏍᏇ ᏚᏓᏂᎸᏨ recognize ᎯᎠ ᎩᎵᏏ ᎤᎬᏫᏳᎯ, George ᎧᏬᎳᏕᏍᎬ, ᏥᏄᏍᏗ ᎯᎠ ᏣᎳᎩ ᎠᎵᏍᏕᎵᏍᎩ.  ᎯᏍᎩ ᏧᏩᎫᏔᏅᏒ ᎪᎯ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ, ᎯᎠ ᏣᎳᎩ ᎠᏰᎲ ᏚᎾᎵᎸ ᏓᏄᏩ ᎬᏙᏗ [[ᏐᎦᎴᏂ]] ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᏧᏕᏘᏴᏓ.  ᎯᎠ ᎦᏓ ᎦᏂᏴᏙ ᏣᎳᎩ ᏄᎬᏫᏳᏌᏕᎩ, ᏱᏂᎬᏛᎾ, ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏫᏛᏗ ᎤᏣᏘ ᎦᏙᎳ Ꮿ ᏄᎾᏛᏅ ᎯᎠ ᏣᎳᎩ, ᎠᎴ ᎯᎠ ᎦᏓ ᎦᏂᏴᏙ ᏭᎵᏱᎶᎸ ᎤᎶᏒᎩ ᎠᏥᏄᏉᏫᏍᎬ Moytoy ᎤᏤᎵ ᎠᏓᏎᎮᏗ avuncular ᏚᎾᏓᏚᏓᎸ.   
 ᎠᏓᎴᏂᏍᎬ ᎾᎾᎢ ᎬᏩᏚᏫᏛ ᎯᎠ ᎢᏳᏩᎪᏗ ᎯᎠ [[ᏴᏩᏁᎬ ᎠᏕᏲᎲ ᏓᏄᏩ]] (ᎣᏂᏱᏳ 1700s), ᎠᏰᏗ ᎢᏳᏓᏛ ᎦᏬᎯᎸᏙᏗ ᎤᎵᏱᎸᏛ ᏗᎳᏍᏕᎸᏗ ᎠᎦᏛᎴᎯᏍᏗ ᎾᎥᎢ ᎤᏁᎬ ᎦᏁᎳ, ᎦᎾᏆᏘᏍᏗ ᏄᏩᎫᏔᏅ ᏓᏂᎦᏘᎴᎬ ᏧᏩᎫᏔᏅ treaties, ᎢᎬᏂᏌᏅᎯ ᎢᎦᏛ ᏣᎳᎩ ᎠᎴᏅᏗ ᎠᏓᏅᏍᏗ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ. ᎾᏍᎩ ᎯᎠ ᎢᎬᏱ ᏂᏓᏙᎳᎬᎾ ᏯᏓᎢᏗᏏ ᏭᎵᏱᎶᎸ ᎠᏓᏅᏍᏗ ᏗᎦᎾᏗᎯᏍᏗ ᎯᎠ [[Mississippi|ᎻᏏᏏᏈ]] ᎤᏪᏴ ᎡᏍᎦᏂ Ꮎ ᏯᏓᎢᏗᏏ ᎣᏂᏯᎨᏍᏙᏗ ᏗᏙᎳᎩ ᎯᎠ ᎧᏃᎮᎭ ᏲᏩᏁᎬ ᎠᎴ [[Missouri|ᏨᎫᎵ]]. ᎤᎾᏤᎵ ᏗᏓᏙᎳᏤᎸ ᎨᏒᎩ ᎪᏢᏅ ᎾᎿ ᎯᎠ ᏒᎯᏰᏱ. Francis ᎠᎴ ᎯᎠ ᎤᏁᎬ ᎤᏪᏴ ᎾᎥᎢ 1800. ᏭᎵᏱᎶᎸ, ᎾᎿᎢ ᎨᏒᎩ ᏯᏛᎿ ᎡᏆ ᏗᏎᏍᏗ ᏣᎳᎩ ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ ᎡᏍᎦᏂ ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎠᏰᎵ ᎤᏙᏢᏒ ᎪᏢᏅ ᏣᎳᎩ ᎧᏃᎯᏴᎯ ᎤᏂᎷᏨ ᎭᏫᎾᏗᏢ ᏲᏩᏁᎬ, ᎬᏙᏗ boundaries ᏂᏛᎴᏅᏓ ᎤᏴᏢ ᎯᎠ ᏲᏩᏁᎬ ᎤᏪᏴ ᎦᎸᎳᏗᏢ ᎯᎠ ᎤᎦᎾᏭ ᎢᏗᏢ ᎠᏕᎸ ᏗᏗ ᎯᎠ ᎤᏁᎬ ᎤᏪᏴ. ᎤᎪᏗᏗ ᎾᏍᎩ ᎯᎠ ᏂᏓᏙᎳᎬᎾ ᎠᏓᏁᏟᏴᏍᏗ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ [[ᏥᎧᎹᎩ]]. ᎤᏗᏅᏒᎩ ᎾᎥᎢ ᎤᎬᏫᏳᎯ [[Dragging Canoe|Dragging ᏥᏳ ᎤᏍᏗ]], ᎯᎠ ᏥᎧᎹᎩ ᎪᏢᏅᎯ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎬᏙᏗ ᎯᎠ [[Shawnee (tribe)|Shawnee]] ᎠᎴ ᏚᎾᏓᏁᏤᎸ ᎭᏫᎾᏗᏢ ᎠᏓᏲᏎᏗ ᏗᎦᏘᎴᎩ ᎢᏳᏕᏘᏴᏓ ᏗᏓᏙᎳᏤᎸ. ᏐᎢ ᏣᎳᎩ ᏗᏓᏘᏁᎯ ᎦᎪ ᎠᎴᏂᏙᎸ ᎭᏫᎾᏗᏢ ᏲᏩᏁᎬ ᎨᏒᎩ ᎯᎠ ᎠᏟᏍᏙᏗ, ᏍᏏᏆᏱ, ᎠᎹ ᎦᏄᎪᎬ ᏩᎶᏏ ᎠᎴ ᎯᎠ Dutch.
 
-ᎾᎥᎢ ᎯᎠ ᎣᏂᏱᏳ 1820s, ᎯᎠ ᎾᎿ ᎨᏒ ᏲᏩᏁᎬ ᎠᏰᎲ ᎠᏤᎸ ᎢᎬᏁᏗ ᎾᎿ ᎠᏯᏍᏗ ᎠᎩᏍᏗ ᎯᎠ ᎦᏙᎯ ᎠᏰᎲᎩ ᎾᎥᎢ ᎯᎠ ᏲᏩᏁᎬ ᏣᎳᎩ. ᎠᏂᎧᎻᏏᏂ ᏲᏩᏁᎬ ᏣᎳᎩ ᎤᏪᏅᏒ Washington, D.C., ᎠᎴ ᎨᏒᎩ ᎤᏩᏌᏙᏴ ᎪᏪᎶᏗ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ ᎠᎲᏏᏓᏍᏗ ᎯᎠ ᏲᏩᏁᎬ ᎧᏃᎯᏴᎯ. ᏲᏩᏁᎬ ᏣᎳᎩ ᎠᏰᎲ ᏔᎵ ᎠᏑᏰᏛ: ᎠᎵᎪᏗ ᎬᏙᏗ ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ ᎠᏓᏅᏍᏗ ᎠᏴᏫᏯ ᎾᎿ ᎨᏒ (ᎣᏂᏯᎨᏍᏙᏗ ᎣᎦᎳᎰᎻ), ᎠᎴ ᎠᏓᏁᏁᎤᎸᏗ ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ ᎠᏓᏯᏍᏗ ᎠᏓᏅᏍᏗ ᎯᎠ ᏲᏩᏁᎬ ᎧᏃᎯᏴᎯ ᎡᏍᎦᏂ. yvwatuwidv 1828, ᎯᎠ ᎠᏂᎳᏍᏓᎸ ᏗᏍᏡᏴ, ᎢᎦᏛ ᏓᏰᏏ ᎠᏴᏫᏯ ᎾᎿ ᎨᏒ. ᎠᏂᏐᎢ disobeyed ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ ᎣᏓᏅᏛ ᎾᎿ ᎯᎠ ᎠᎦᏴᎵ ᎧᏃᎯᏴᎯ ᏗᎦᏙᎯ ᎭᏫᎾᏗᏢ ᏲᏩᏁᎬ. ᎾᏍᎩ ᎦᎪ ᎣᏓᏅᏛ ᎾᎿ ᎯᎠ ᎠᎦᏴᎵ ᏲᏩᏁᎬ ᏣᎳᎩ ᎧᏃᎯᏴᎯ ᏗᎦᏙᎯ ᎤᎭ lobbied ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎠᏰᎵ ᎤᏙᏢᏒ ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ ᎢᎬᏱ 1900s ᎾᏍᏋ ᎠᎦᏎᏍᏔᏅ ᏂᎬᎾᏛ ᎠᏰᎵ ᎤᏬᎳᏨ ᏣᎳᎩ ᎠᏂᎳᏍᏓᎸ. ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᎭ ignored ᎤᎾᏤᎵ ᏧᎾᏓᏱᎵᏓᏍᏗ. ᎪᎯ ᎢᎦ, ᎾᎿᎢ ᎠᎴ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏣᎳᎩ ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᏲᏩᏁᎬ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ [[Missouri|ᏨᎫᎵ]] ᎦᎪ ᎠᎴ ᎦᏃᏢᏥᏙᎯ ᎾᏍᎩ ᎯᎠ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-ᎤᏍᏗ ᎦᏅᏅ ᏗᎦᏌᏬᏍᏗ ᏣᎳᎩ. (ᎠᎪᏩᏛᏗ "ᎢᏧᎳ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎩᎳ Conquered" ᎾᎥᎢ ᎠᎵᏍᏓᏴᏗ Northrup, "ᎯᎠ ᏣᎳᎩ ᏴᏫ" ᎾᎥᎢ Thomas E. ᎪᏪᎵ ᏫᎦᏅᏅ, "ᎢᏰᎵᏍᏗᎢ ᎯᎠ ᏣᎳᎩ" ᎾᎥᎢ James Mooney)
+ᎾᎥᎢ ᎯᎠ ᎣᏂᏱᏳ 1820s, ᎯᎠ ᎾᎿ ᎨᏒ ᏲᏩᏁᎬ ᎠᏰᎲ ᎠᏤᎸ ᎢᎬᏁᏗ ᎾᎿ ᎠᏯᏍᏗ ᎠᎩᏍᏗ ᎯᎠ ᎦᏙᎯ ᎠᏰᎲᎩ ᎾᎥᎢ ᎯᎠ ᏲᏩᏁᎬ ᏣᎳᎩ. ᎠᏂᎧᎻᏏᏂ ᏲᏩᏁᎬ ᏣᎳᎩ ᎤᏪᏅᏒ Washington, D.C., ᎠᎴ ᎨᏒᎩ ᎤᏩᏌᏙᏴ ᎪᏪᎶᏗ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ ᎠᎲᏏᏓᏍᏗ ᎯᎠ ᏲᏩᏁᎬ ᎧᏃᎯᏴᎯ. ᏲᏩᏁᎬ ᏣᎳᎩ ᎠᏰᎲ ᏔᎵ ᎠᏑᏰᏛ: ᎠᎵᎪᏗ ᎬᏙᏗ ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ ᎠᏓᏅᏍᏗ ᎠᏴᏫᏯ ᎾᎿ ᎨᏒ (ᎣᏂᏯᎨᏍᏙᏗ ᎣᎦᎳᎰᎻ), ᎠᎴ ᎠᏓᏁᏁᎤᎸᏗ ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ ᎠᏓᏯᏍᏗ ᎠᏓᏅᏍᏗ ᎯᎠ ᏲᏩᏁᎬ ᎧᏃᎯᏴᎯ ᎡᏍᎦᏂ. ᏴᏩᏚᏫᏛ 1828, ᎯᎠ ᎠᏂᎳᏍᏓᎸ ᏗᏍᏡᏴ, ᎢᎦᏛ ᏓᏰᏏ ᎠᏴᏫᏯ ᎾᎿ ᎨᏒ. ᎠᏂᏐᎢ disobeyed ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ ᎣᏓᏅᏛ ᎾᎿ ᎯᎠ ᎠᎦᏴᎵ ᎧᏃᎯᏴᎯ ᏗᎦᏙᎯ ᎭᏫᎾᏗᏢ ᏲᏩᏁᎬ. ᎾᏍᎩ ᎦᎪ ᎣᏓᏅᏛ ᎾᎿ ᎯᎠ ᎠᎦᏴᎵ ᏲᏩᏁᎬ ᏣᎳᎩ ᎧᏃᎯᏴᎯ ᏗᎦᏙᎯ ᎤᎭ lobbied ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎠᏰᎵ ᎤᏙᏢᏒ ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ ᎢᎬᏱ 1900s ᎾᏍᏋ ᎠᎦᏎᏍᏔᏅ ᏂᎬᎾᏛ ᎠᏰᎵ ᎤᏬᎳᏨ ᏣᎳᎩ ᎠᏂᎳᏍᏓᎸ. ᎯᎠ ᎢᏧᎳ ᎠᏴ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᎭ ignored ᎤᎾᏤᎵ ᏧᎾᏓᏱᎵᏓᏍᏗ. ᎪᎯ ᎢᎦ, ᎾᎿᎢ ᎠᎴ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏣᎳᎩ ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᏲᏩᏁᎬ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ [[Missouri|ᏨᎫᎵ]] ᎦᎪ ᎠᎴ ᎦᏃᏢᏥᏙᎯ ᎾᏍᎩ ᎯᎠ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-ᎤᏍᏗ ᎦᏅᏅ ᏗᎦᏌᏬᏍᏗ ᏣᎳᎩ. (ᎠᎪᏩᏛᏗ "ᎢᏧᎳ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎩᎳ Conquered" ᎾᎥᎢ ᎠᎵᏍᏓᏴᏗ Northrup, "ᎯᎠ ᏣᎳᎩ ᏴᏫ" ᎾᎥᎢ Thomas E. ᎪᏪᎵ ᏫᎦᏅᏅ, "ᎢᏰᎵᏍᏗᎢ ᎯᎠ ᏣᎳᎩ" ᎾᎥᎢ James Mooney)
 
-[[Image:Chief John Ross.jpg|left|thumb|150px|ᎤᎬᏫᏳᎯ [[ᎦᎳᏅᎯ Ross]], c. [[1840]]]]
+[[Image:Chief John Ross.jpg|left|thumb|150px|ᎤᎬᏫᏳᎯ [[ᎦᎳᏅᎯ Ross]], ca. 1840]]
 [[ᎦᎳᏅᎯ Ross]] ᏥᏄᏍᏛᎩ ᎤᎵᏍᎨᏛ ᎠᏎᏍᏙ ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᏃᎮᏍᎩ ᎯᎠ ᏣᎳᎩ ᎠᏂᎳᏍᏓᎸ. ᎤᏤᎵ ᎠᏓᏙᏓ emigrated ᏂᏛᎴᏅᏓ Scotland ᏧᏩᎫᏔᏅᏒ ᎯᎠ ᎠᏕᏲᎲ ᏓᏄᏩ. ᎤᏤᎵ ᎤᏂᏥ ᏥᏄᏍᏛᎩ ᎩᏄᏙᏗ-ᎩᎬ ᏣᎳᎩ ᎠᎨᏴ ᎾᏍᎩ ᎤᏤᎵ ᎠᏓᏙᏓ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ᏂᏛᎴᏅᏓ Scotland. ᎾᏍᎩ ᎠᏍᎦᏯ ᎤᎴᏅᎲ ᎤᏤᎵ ᏴᏫ ᎤᏁᏓᏍᏗ ᏄᏛᏁᎵᏙᎸ ᎭᏫᎾᏗᏢ 1809. ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏥᏄᏍᏛᎩ ᎤᏬᎯᏳᏒ ᎭᏫᎾᏗᏢ 1820, ᎬᏙᏗ ᏧᏓᎩᏴᎲ ᏴᏫ ᎤᏁᏓᏍᏗ ᎠᏰᎵ ᎤᎾᏒᎧᎵ. ᎦᎳᏅᎯ Ross ᎠᏓᏁᏟᏴᏍᏗ ᎯᎠ ᎤᎬᏫᏳᎯ ᎯᎠ ᎠᏂᎳᏍᏓᎸ ᎭᏫᎾᏗᏢ 1828 ᎠᎴ ᏂᎦᏰᏙᎲᏊ ᎯᎠ ᎤᎬᏫᏳᎯ ᎢᏳᏩᎪᏗ ᎤᏤᎵ ᎠᏲᎱᎯᏍᏗ ᎭᏫᎾᏗᏢ 1866.
 
-ᏣᎳᎩ ᎨᏒᎩ ᎠᎲᏏᏓᏍᏗ ᏂᏛᎴᏅᏓ ᎤᎾᏤᎵ tsuqagutanvsv ᏗᎦᏙᎯ ᎭᏫᎾᏗᏢ ᎤᏴᏢ [[Georgia|ᏣᏥᏱ]] ᎠᎴ ᎯᎠ Carolinas ᎢᎬᏂᏏᏍᎩ ᎤᎵᏍᏓᎯᎨ ᎠᏒᎾᏍᏗᏱ ᎤᏁᎬ ᎾᏂᎥ ᏴᏫ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ [[gold rush|ᎠᏕᎸ ᏓᎶᏂᎨ ᎬᏅᎢᏍᏗ]] yvwatuwidv [[Dahlonega, Georgia|ᏓᎶᏂᎦ, ᏣᏥᏱ]] ᎭᏫᎾᏗᏢ ᎯᎠ 1830. ᎠᎪᏩᏛᏗ: [[ᎠᏴᏫᏯ ᎠᎲᏏᏓᏍᏗ]], ''[[Cherokee Nation v. Georgia|ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ v. ᏣᏥᏱ]]'', ᎠᎴ [[ᎤᏍᏗ ᎦᏅᏅ ᏗᎦᏌᏬᏍᏗ]].
+ᏣᎳᎩ ᎨᏒᎩ ᎠᎲᏏᏓᏍᏗ ᏂᏛᎴᏅᏓ ᎤᎾᏤᎵ ᏧᏩᏓᏔᏅᏒ ᏗᎦᏙᎯ ᎭᏫᎾᏗᏢ ᎤᏴᏢ [[Georgia|ᏣᏥᏱ]] ᎠᎴ [[North Carolina|ᎦᏯᎴᏂ]] ᎠᎴ [[South Carolina|ᏐᎦᎴᏂ]] ᎢᎬᏂᏏᏍᎩ ᎤᎵᏍᏓᎯᎨ ᎠᏒᎾᏍᏗᏱ ᎤᏁᎬ ᎾᏂᎥ ᏴᏫ, ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ [[gold rush|ᎠᏕᎸ ᏓᎶᏂᎨ ᎬᏅᎢᏍᏗ]] ᏴᏩᏚᏫᏛ [[Dahlonega, Georgia|ᏓᎶᏂᎦ, ᏣᏥᏱ]] ᎭᏫᎾᏗᏢ ᎯᎠ 1830. ᎠᎪᏩᏛᏗ: [[ᎠᏴᏫᏯ ᎠᎲᏏᏓᏍᏗ]], ''[[Cherokee Nation v. Georgia|ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ v. ᏣᏥᏱ]]'', ᎠᎴ [[ᎤᏍᏗ ᎦᏅᏅ ᏗᎦᏌᏬᏍᏗ]].
 
-Samuel ᏗᎦᏣᏄᎶ ᎤᎾᏣ, ᎪᏪᎵ Ꭺgoweli gowlisgi ''ᏣᎳᎩ ᏭᏕᎵᎬ'', ᎪᏪᎵᎠ, "ᎾᎯᏳᎢ ... ᎾᎿᎢ ᎤᎷᏨᎩ ᎯᎠ ᎤᎬᏫᏳ ᏕᎫᎪᏗᏍᎬ ᎦᏂᏰᎬ. ᏂᏛᎴᏅᏓ ᎯᎠ ᏓᏍᏓᏅᏅ ᏚᎷᏨ-walled ᎤᎵᏍᏕᎸᏗ ᎯᎠ ᎠᏂᏯᏫᏍᎩ fanned atsinuqowisgv ᏗᎦᎾᏗᎯᏍᏗ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ, invading ᏂᎦᎥᎢ ᏧᏓᎴᎾᎢ, ᏂᎦᎥᎢ ᎠᏓᏁᎸ, ᎤᎾᏍᏕᏢ atsinuqowisgv ᎯᎠ ᎦᏁᎳ ᎾᎾᎢ ᎠᏓᎯᏍᏗ ᎪᏍᏓᏱ. ᎯᎠ ᏣᎳᎩ ᎥᏝᎰᏩ ᎠᏰᎲ ᎢᏳᏩᎪᏗ ᎠᏕᎳᎰᎯᏍᏗ ᎦᏙ ᎤᏍᏗ ᏥᏄᏍᏛᎩ ᏂᎦᎵᏍᏔᏅᏂᏙᎲ ᏥᏄᏍᏗ ᎤᏅᏌ ᎨᏒᎩ prodded ᎾᏍᎩᏯᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᎪᏗᏗ ᎠᏫ ᎤᏃᏕᎾ ᏫᏚᏳᎪᏛ ᎯᎠ ᎤᏓᏂᏝᏅ ᎠᎴᏫᏍᏙᏗ, threatened ᎬᏙᏗ ᏗᏰᎳᏍᏗ ᎠᎴ ᏍᏆᎳ ᎦᎶᏇ, ᎠᏥᏠᏒ ᎬᏙᏗ ᏗᏂᏃᎨᏂ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎢᏳᏃ ᎤᏅᏌ resisted."<ref>ᏂᏛᎴᏅᏓ Samuel ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎪᎷᏩᏛᏗ, ''ᏣᎳᎩ ᏭᏕᎵᎬ: ᎠᏰᎵ ᎤᏙᏢᏒ Betrayed'' (ᎢᏤ York: Doubleday, 1976, ISBN 0385067356), p. 232.</ref> ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏂᏰᎬ ᎯᎠ ᎤᏩᏌᏙᏴ ᎠᏎᎸᎯ, ᎯᎠ ᏣᎳᎩ ᎨᏒᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎪᎯᎸᎢ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎠᏓᏁᏗ ᎤᎾᏤᎵ ᎤᏲᎱᏒ ᎧᎵ ᏗᏓᏂᏐᏗ. ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ, ᎯᎠ ᏓᏂᏃᎩᏍᎬ [[ᎤᏁᎳᏅᎢᎤᏪᏥ]] ᎠᏰᎲ ᏰᎵᏊ. ᎣᏂ ᏧᏩᎫᏛ ᎾᎯᏳᎢ, ᎤᏁᎳᏅᎢᎤᏪᏥ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎠᎦᏎᏍᏔᏅ ᎯᎠ ᏣᎳᎩ ᎬᎾᏕᎾ ᎠᎵᎮᎵᏍᏗ ᏗᎦᏃᎩᏍᏗ.
+Samuel ᏗᎦᏣᏄᎶ ᎤᎾᏣ, ᎪᏪᎵ [[ᎠᏪᎵ ᎪᏪᎵᏍᏗ]] ''ᏣᎳᎩ ᏭᏕᎵᎬ'', ᎪᏪᎵᎠ, "ᎾᎯᏳᎢ ... ᎾᎿᎢ ᎤᎷᏨᎩ ᎯᎠ ᎤᎬᏫᏳ ᏕᎫᎪᏗᏍᎬ ᎦᏂᏰᎬ. ᏂᏛᎴᏅᏓ ᎯᎠ ᏓᏍᏓᏅᏅ ᏚᎷᏨ-walled ᎤᎵᏍᏕᎸᏗ ᎯᎠ ᎠᏂᏯᏫᏍᎩ fanned ᎠᏥᏄᏉᏫᏍᎬ ᏗᎦᎾᏗᎯᏍᏗ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ, invading ᏂᎦᎥᎢ ᏧᏓᎴᎾᎢ, ᏂᎦᎥᎢ ᎠᏓᏁᎸ, ᎤᎾᏍᏕᏢ ᎠᏥᏄᏉᏫᏍᎬ ᎯᎠ ᎦᏁᎳ ᎾᎾᎢ ᎠᏓᎯᏍᏗ ᎪᏍᏓᏱ. ᎯᎠ ᏣᎳᎩ ᎥᏝᎰᏩ ᎠᏰᎲ ᎢᏳᏩᎪᏗ ᎠᏕᎳᎰᎯᏍᏗ ᎦᏙ ᎤᏍᏗ ᏥᏄᏍᏛᎩ ᏂᎦᎵᏍᏔᏅᏂᏙᎲ ᏥᏄᏍᏗ ᎤᏅᏌ ᎨᏒᎩ prodded ᎾᏍᎩᏯᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᎪᏗᏗ ᎠᏫ ᎤᏃᏕᎾ ᏫᏚᏳᎪᏛ ᎯᎠ ᎤᏓᏂᏝᏅ ᎠᎴᏫᏍᏙᏗ, threatened ᎬᏙᏗ ᏗᏰᎳᏍᏗ ᎠᎴ ᏍᏆᎳ ᎦᎶᏇ, ᎠᏥᏠᏒ ᎬᏙᏗ ᏗᏂᏃᎨᏂ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎢᏳᏃ ᎤᏅᏌ resisted."<ref>ᏂᏛᎴᏅᏓ Samuel ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎪᎷᏩᏛᏗ, ''ᏣᎳᎩ ᏭᏕᎵᎬ: ᎠᏰᎵ ᎤᏙᏢᏒ Betrayed'' (ᏄᏯᎩ: Doubleday, 1976, ISBN 0385067356), p. 232.</ref> ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏂᏰᎬ ᎯᎠ ᎤᏩᏌᏙᏴ ᎠᏎᎸᎯ, ᎯᎠ ᏣᎳᎩ ᎨᏒᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎪᎯᎸᎢ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎠᏓᏁᏗ ᎤᎾᏤᎵ ᎤᏲᎱᏒ ᎧᎵ ᏗᏓᏂᏐᏗ. ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ, ᎯᎠ ᏓᏂᏃᎩᏍᎬ [[ᎤᏁᎳᏅᎢᎤᏪᏥ]] ᎠᏰᎲ ᏰᎵᏊ. ᎣᏂ ᏧᏩᎫᏛ ᎾᎯᏳᎢ, ᎤᏁᎳᏅᎢᎤᏪᏥ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎠᎦᏎᏍᏔᏅ ᎯᎠ ᏣᎳᎩ ᎬᎾᏕᎾ ᎠᎵᎮᎵᏍᏗ ᏗᎦᏃᎩᏍᏗ.
 
 [[Image:CNCourthouse1800.jpg|right|thumb|350px|ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎦᏁᎸ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ 1800'.]]
-ᏌᏊ ᎢᏳᏩᎫᏗ ᎯᎠ ᏣᎳᎩ ᏭᎷᏨᎩ [[ᎠᏴᏫᏯ ᎾᎿ ᎨᏒ]] (ᎾᏊ [[ᎣᎦᎳᎰᎻ]]), ᏄᎵᏂᎬᎬ ᏚᏍᏆᎸᏔᏅ ᎦᎸᎳᏗ ᎠᎴ ᎯᎠ ᎠᎴᏫᏍᏙᏗ ᎯᎠ ᏣᎳᎩ [[ᎩᎬ ᏗᎧᎿᏩᏛᏍᏗ]] ᏥᏄᏍᏛᎩ ignored. ᎾᎿ [[ᏕᎭᎷᏱ 22]], [[1839]], ᎤᎶᏐᏅ ᎯᎠ ᎤᏓᎪᏂᏲᎢᏍᏗ tribal ᏗᏠᎯᏍᏗᏱ, ᎢᎦᏛ ᎯᎠ ᏧᏓᏃᏣᎵ signers ᎯᎠ [[ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ  ᎢᏤ Echota]] ᎨᏒᎩ assassinated, ᎠᏠᏯᏍᏗᏍᎩ ᎯᎠ drafter ᎯᎠ ᎩᎬ ᏗᎧᎿᏩᏛᏍᏗ, [[ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᏣᎴᎩ]], ᎨᎳᏛᏍᏗ ᎬᏙᏗ [[ᎦᎳᏅᎯ ᏣᎴᎩ]] ᎠᎴ [[Elias Boudinot]]. ᎪᎯ ᎤᏂᎩᏍᏔᏅ 15 ᏧᏕᏘᏴᏓ [[ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ]] ᏧᏠᎯᏍᏗ ᎯᎠ ᏣᎳᎩ. ᏌᏊ ᎯᎠ ᎢᎦᏪᏛ survivors ᏥᏄᏍᏛᎩ [[ᎦᏙᎬ Watie]], ᎦᎪ ᎠᏓᏁᏟᏴᏍᏗ [[ᎠᎵᎪᏒ]] ᏂᎦᎥ ᎾᎯᏳᎨᏒ ᎯᎠ [[ᏴᏩᏁᎬ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ]]. ᎯᎠ ᏣᎳᎩ ᎨᏒᎩ ᏌᏊ ᎯᎠ ᎯᏍᎩ "ᎤᎾᏓᏅᏘᏌᏅ ᎠᏂᎳᏍᏓᎸ" Ꮎ ᎠᏍᏆᏛ treaties ᎬᏙᏗ, ᎠᎴ ᎨᏒᎩ ᎤᏬᎳᏨ ᎾᎥᎢ, ᎯᎠ ᎠᎵᎪᏒ ᎧᏃᎮᎭ ᎠᎺᎵᎨ.
+ᏌᏊ ᎢᏳᏩᎫᏗ ᎯᎠ ᏣᎳᎩ ᏭᎷᏨᎩ [[ᎠᏴᏫᏯ ᎾᎿ ᎨᏒ]] (ᎾᏊ [[ᎣᎦᎳᎰᎻ]]), ᏄᎵᏂᎬᎬ ᏚᏍᏆᎸᏔᏅ ᎦᎸᎳᏗ ᎠᎴ ᎯᎠ ᎠᎴᏫᏍᏙᏗ ᎯᎠ ᏣᎳᎩ [[ᎩᎬ ᏗᎧᎿᏩᏛᏍᏗ]] ᏥᏄᏍᏛᎩ ignored. ᎾᎿ ᏕᎭᎷᏱ 22, 1839, ᎤᎶᏐᏅ ᎯᎠ ᎤᏓᎪᏂᏲᎢᏍᏗ tribal ᏗᏠᎯᏍᏗᏱ, ᎢᎦᏛ ᎯᎠ ᏧᏓᏃᏣᎵ signers ᎯᎠ [[ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ]]  [[New Echota|ᎠᏤ ᎡᏦᏔ]] ᎨᏒᎩ assassinated, ᎠᏠᏯᏍᏗᏍᎩ ᎯᎠ drafter ᎯᎠ ᎩᎬ ᏗᎧᎿᏩᏛᏍᏗ, [[ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᏣᎴᎩ]], ᎨᎳᏛᏍᏗ ᎬᏙᏗ [[ᎦᎳᏅᎯ ᏣᎴᎩ]] ᎠᎴ [[Elias Boudinot]]. ᎪᎯ ᎤᏂᎩᏍᏔᏅ 15 ᏧᏕᏘᏴᏓ [[ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ]] ᏧᏠᎯᏍᏗ ᎯᎠ ᏣᎳᎩ. ᏌᏊ ᎯᎠ ᎢᎦᏪᏛ survivors ᏥᏄᏍᏛᎩ [[Stand Watie|ᎦᏙᎬ ᎤᏪᏘ]], ᎦᎪ ᎠᏓᏁᏟᏴᏍᏗ [[ᎠᎵᎪᏒ]] ᏂᎦᎥ ᎾᎯᏳᎨᏒ ᎯᎠ [[ᏴᏩᏁᎬ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ]]. ᎯᎠ ᏣᎳᎩ ᎨᏒᎩ ᏌᏊ ᎯᎠ ᎯᏍᎩ "ᎤᎾᏓᏅᏘᏌᏅ ᎠᏂᎳᏍᏓᎸ" Ꮎ ᎠᏍᏆᏛ treaties ᎬᏙᏗ, ᎠᎴ ᎨᏒᎩ ᎤᏬᎳᏨ ᎾᎥᎢ, ᎯᎠ ᎠᎵᎪᏒ ᎧᏃᎮᎭ ᎠᎺᎵᎨ.
 
-ᎭᏫᎾᏗᏢ [[1848]] ᎤᎾᏓᏟᏌᎲ ᏣᎳᎩ ᎠᏫᏒᏗ atsinuqowisgv ᎾᎿ ᎥᎢᏒᎢ [[California]] ᎠᎦᏘᏍᎬ ᎾᏍᎩᎾᎢ ᎢᏤ ᏗᏓᏙᎳᏤᎸ ᏗᎦᏙᎯ. ᎯᎠ ᎥᎢᏒᎢ ᎠᏍᏓᏩᏛᏓ ᎯᎠ [[Arkansas River|ᏲᏩᏁᎬ ᎤᏪᏴ]] upstream [[Rocky ᏙᏓᎸ]] ᎭᏫᎾᏗᏢ ᎡᏙᎠ-ᎢᎦ [[Colorado]], ᎾᎯᏳᎢ ᎠᏍᏓᏩᏛᏓ ᎯᎠ alenvdidsv ᏙᏓᎸ northward ᎾᎾᎯ ᎡᏙᎠ-ᎢᎦ [[Wyoming]] ᎤᏓᎷᎸ ᎠᎦᏔᎲᏒ westward. ᎯᎠ ᏫᏚᏳᎪᏛ ᏗᏙᎳᎩ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ [[ᏣᎳᎩ ᎤᏍᏗ ᎦᏅᏅ]]. ᎯᎠ ᎤᎾᏓᏟᏌᎲ, ᎦᏙ ᎤᏍᏗ undertook [[ᎠᏕᎸ ᏓᎶᏂᎨ]] ᎤᏚᎩ ᎦᎬᏗ ᎭᏫᎾᏗᏢ California, ᎢᎦᎷᎦ ᎨᎳᏛᏍᏗ ᎯᎠ ᎤᏠᏱ ᏫᏚᏳᎪᏛ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᏑᏕᏘᏴᏓ, noticing [[placer mining|placer]] ᎠᏕᎸ ᏓᎶᏂᎨ ᏚᏂᏍᏆᏂᎪᏛ ᎭᏫᎾᏗᏢ tributaries ᎯᎠ ᎤᎦᎾᏭ Platte. ᎯᎠ ᎪᎷᏩᏛᏗ ᎤᏪᏅᏒ ᎬᎨᏫᏍᏗ ᎾᏍᎩᎾᎢ ᎯᏍᎩ, ᎠᎴ ᏭᎵᏱᎶᎸ ᎠᏓᏁᏟᏴᏍᏗ ᏌᏊ ᎯᎠ ᎢᎬᏱ ᎠᎴᏅᏗ ᏙᏧᏓᎴᏅ ᎯᎠ [[Colorado ᎠᏕᎸ ᏓᎶᏂᎨ ᎬᏅᎢᏍᏗ]] [[1859]].
+ᎭᏫᎾᏗᏢ 1848 ᎤᎾᏓᏟᏌᎲ ᏣᎳᎩ ᎠᏫᏒᏗ ᎠᏥᏄᏉᏫᏍᎬ ᎾᎿ ᎥᎢᏒᎢ [[California|ᎠᏪᎵ ᎪᏪᎵᏍᏗ]] ᎠᎦᏘᏍᎬ ᎾᏍᎩᎾᎢ ᎢᏤ ᏗᏓᏙᎳᏤᎸ ᏗᎦᏙᎯ. ᎯᎠ ᎥᎢᏒᎢ ᎠᏍᏓᏩᏛᏓ ᎯᎠ [[Arkansas River|ᏲᏩᏁᎬ ᎤᏪᏴ]] upstream [[Rocky ᏙᏓᎸ]] ᎭᏫᎾᏗᏢ ᎡᏙᎠ-ᎢᎦ [[Colorado]|ᎧᎶᏩᏓ], ᎾᎯᏳᎢ ᎠᏍᏓᏩᏛᏓ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᏙᏓᎸ northward ᎾᎾᎯ ᎡᏙᎠ-ᎢᎦ [[Wyoming|ᏩᏲᎻ]] ᎤᏓᎷᎸ ᎠᎦᏔᎲᏒ westward. ᎯᎠ ᏫᏚᏳᎪᏛ ᏗᏙᎳᎩ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ [[ᏣᎳᎩ ᎤᏍᏗ ᎦᏅᏅ]]. ᎯᎠ ᎤᎾᏓᏟᏌᎲ, ᎦᏙ ᎤᏍᏗ undertook [[ᎠᏕᎸ ᏓᎶᏂᎨ]] ᎤᏚᎩ ᎦᎬᏗ ᎭᏫᎾᏗᏢ [[California|ᎠᏕᎳᏧᏢᎢ]], ᎢᎦᎷᎦ ᎨᎳᏛᏍᏗ ᎯᎠ ᎤᏠᏱ ᏫᏚᏳᎪᏛ ᎯᎠ ᎠᏍᏓᏩᏗᏒ ᏑᏕᏘᏴᏓ, noticing [[placer mining|placer]] ᎠᏕᎸ ᏓᎶᏂᎨ ᏚᏂᏍᏆᏂᎪᏛ ᎭᏫᎾᏗᏢ tributaries ᎯᎠ ᎤᎦᎾᏭ Platte. ᎯᎠ ᎪᎷᏩᏛᏗ ᎤᏪᏅᏒ ᎬᎨᏫᏍᏗ ᎾᏍᎩᎾᎢ ᎯᏍᎩ, ᎠᎴ ᏭᎵᏱᎶᎸ ᎠᏓᏁᏟᏴᏍᏗ ᏌᏊ ᎯᎠ ᎢᎬᏱ ᎠᎴᏅᏗ ᏙᏧᏓᎴᏅ ᎯᎠ [[ᎧᎶᏩᏓ ᎠᏕᎸ ᏓᎶᏂᎨ ᎬᏅᎢᏍᏗ]] 1859.
 
-ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᏛ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᏣᎳᎩ ᎨᏒᎩ ᎠᎲᏓ ᎾᎿ ᎯᎠ [[ᎤᏍᏗ ᎦᏅᏅ ᏗᎦᏌᏬᏍᏗ]].  William Holland Thomas, ᎤᏁᎬ ᎠᏓᎾᏅ ᎤᏤᎵᎢ ᎠᎴ ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏓᏎᎮᎮᎯ ᏂᏛᎴᏅᏓ [[Jackson ᏍᎦᏚᎩ, ᎤᏴᏢ Carolina]] ᎤᎵᏍᏕᎸᎲᎩ ᎦᏬᎯᎸᏙᏗ 600 ᏣᎳᎩ ᏂᏛᎴᏅᏓ Qualla ᎦᏚᎲ (ᎯᎠ ᏄᏍᏗᏓᏅ ᎪᎯᏊ ᎢᏴ ᏥᎩ-ᎢᎦ [[ᏣᎳᎩ, ᎤᏴᏢ Carolina]]) ᎣᏤᎵ ᎢᎬᏁᎯ ᎤᏴᏢ Carolina citizenship.  ᏥᏄᏍᏗ ᏯᏛᎿ, ᎾᏍᎩ ᎯᎠ ᎠᏁᎲᎢ ᎨᏒᎩ tohi adedi ᏂᏛᎴᏅᏓ ᎤᏩᏌᏙᏴ ᎠᎲᏏᏓᏍᏗ ᎯᎠ ᏭᏕᎵᎬ.  ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᎦᏬᎯᎸᏙᏗ 400 ᏐᎢ ᏣᎳᎩ hid ᏂᏛᎴᏅᏓ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏂᏯᏫᏍᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᏄᏩᏓᎴ Snowbird ᏙᏓᎸ ᎾᎥᏂᎨᏍᏙᏗ [[Graham County, North Carolina|Graham ᏍᎦᏚᎩ, ᎤᏴᏢ Carolina]], ᎭᏫᎾᏗᏢ ᎯᎠ leadership Tsali[http://www.cherokee-nc.com/history.php?Name=Tsali] (ᎯᎠ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎯᎠ ᏙᏯᏗᏢ ᎢᏳᎾᏛᏁᏗ ᎠᎾᏛᏁᎵᏍᎬ ''[[Unto These Hills|Unto ᎾᏍᎩ ᎯᎠ ᏗᎦᏚᏏ]]'' ᎠᏰᎲᎩ ᎭᏫᎾᏗᏢ ᏣᎳᎩ, NC).  ᎢᏧᎳ, ᎾᏍᎩ ᎯᎠ ᏚᎾᏓᏟᏌᎲ ᎨᏒᎩ ᎯᎠ ᎠᎴᏅᏙᏗ ᎾᏍᎩᎾᎢ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏊ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ ᏣᎳᎩ.  atsinuqowisgv ᎤᎵᎮᎵᏣᏘ Thomas, ᎾᏍᎩ ᎯᎠ ᏭᏕᎵᎬᏗᏢ ᎤᏴᏢ Carolina ᏣᎳᎩ ᎢᏯᏓᏛᏁᎸ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ ᏥᏄᏍᏗ ᎢᎦᏛ Thomas' ᎤᏂᎪᏗᏗ. Thomas' ᎤᏂᎪᏗᏗ ᎤᏠᏯᏍᏛᎩ ᎠᎾᏗᏒᎯᎯ, ᎠᎾᏗᏒᎯᎯ ᎠᎴ ᎤᎳᏂᎬᎬ. ᎯᎠ ᎤᏂᎪᏗᏗ mustered ᎾᎥᏂᎨᏍᏙᏗᏇ 2,000 ansigaya ᎢᏧᎳ ᏣᎳᎩ ᎠᎴ ᎤᏁᎬ ᎠᏓᎴᏂᏍᎬ, ᏓᎾᎵᎲ ᎢᎬᏱᏗᏢ ᎭᏫᎾᏗᏢ Virginia, ᎭᏢᏃ ᎤᎾᏤᎵ ᏓᎾᏟᎲ ᎪᏪᎸ ᏥᏄᏍᏛᎩ ᏙᏯᏗᏢ ᏓᏚᏓᎸ[http://www.cherokee-nc.com/history.php?Name=Will%20Thomas]. Thomas' ᎤᏂᎪᏗᏗ ᏥᏄᏍᏛᎩ ᎯᎠ ᎣᏂ ᎠᎵᎪᏒ ᏌᏊᎭ ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎤᎾᏛᏁᎸᏗ ᎯᎠ ᏓᏄᏩ ᏧᏓᏲᎯᏍᏗ ᎤᎶᏐᏅ capturing [[Waynesville, ᎤᏴᏢ Carolina]] ᎾᎿ [[May 9|ᎠᎾᏍᎬᏘ 9]], [[1865]].  ᎤᏅᏌ ᏚᏓᏂᎸᏨ ᎠᏑᎳᎪᎢᏍᏗ ᏂᏛᎴᏅᏓ ᏓᎾᏩᏄᏁᎯ ᎾᎿ ᎯᎠ ᏄᏍᏗᏓᏅ ᎠᎴᏂᏙᎲ ᎠᎾᏓᏁᎲ ᏗᎦᏂᏴᎯ ᎢᎬᏁᎸ ᎤᎾᏤᎵ ᏗᏂᏃᎨᏂ ᎾᏍᎩᎾᎢ ᎠᏂᏃᎯᎵᏙᎲ.  ᎪᎯ, ᏔᎵ ᎬᏙᏗ [[ᎦᏙᎬ Watie]] ᎤᏤᎵ ᏧᏓᏲᎯᏍᏗ ᏭᏕᎵᎬᏗᏢ ᎠᏂᏌᏙᏯᏍᎩ ᎾᎿ ᎫᏰᏉᏂ 23, 1865, ᎤᏓᏁᎸ ᎯᎠ ᏣᎳᎩ ᎯᎠ ᎤᎾᏤᎵᏛ ᎠᎴᏂᏙᎲ ᎯᎠ ᎤᏙᎯᏳ ᎣᏂ ᎤᎾᏓᏟᏌᎲ ᏧᏓᏲᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎤᎾᏛᏁᎸᏗ ᎯᎠ ᏴᏩᏁᎬ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ.
+ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᏛ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᏣᎳᎩ ᎨᏒᎩ ᎠᎲᏓ ᎾᎿ ᎯᎠ [[ᎤᏍᏗ ᎦᏅᏅ ᏗᎦᏌᏬᏍᏗ]].  William Holland Thomas, ᎤᏁᎬ ᎠᏓᎾᏅ ᎤᏤᎵᎢ ᎠᎴ ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏓᏎᎮᎮᎯ ᏂᏛᎴᏅᏓ [[Jackson ᏍᎦᏚᎩ, ᎦᏯᎴᏂ]] ᎤᎵᏍᏕᎸᎲᎩ ᎦᏬᎯᎸᏙᏗ 600 ᏣᎳᎩ ᏂᏛᎴᏅᏓ [[Qualla|ᏆᎳ]] ᎦᏚᎲ (ᎯᎠ ᏄᏍᏗᏓᏅ ᎪᎯᏊ ᎢᏴ ᏥᎩ-ᎢᎦ [[ᏣᎳᎩ, ᎦᏯᎴᏂ]]) ᎣᏤᎵ ᎢᎬᏁᎯ ᎦᏯᎴᏂ citizenship.  ᏥᏄᏍᏗ ᏯᏛᎿ, ᎾᏍᎩ ᎯᎠ ᎠᏁᎲᎢ ᎨᏒᎩ ᏙᎯ ᎠᏕᏗ ᏂᏛᎴᏅᏓ ᎤᏩᏌᏙᏴ ᎠᎲᏏᏓᏍᏗ ᎯᎠ ᏭᏕᎵᎬ.  ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᎦᏬᎯᎸᏙᏗ 400 ᏐᎢ ᏣᎳᎩ hid ᏂᏛᎴᏅᏓ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏂᏯᏫᏍᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᏄᏩᏓᎴ Snowbird ᏙᏓᎸ ᎾᎥᏂᎨᏍᏙᏗ [[Graham County, North Carolina|Graham ᏍᎦᏚᎩ, ᎦᏯᎴᏂ]], ᎭᏫᎾᏗᏢ ᎯᎠ leadership Tsali<ref>[http://www.cherokee-nc.com/history.php?Name=Tsali "ᏣᎵ."]</ref> (ᎯᎠ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎯᎠ ᏙᏯᏗᏢ ᎢᏳᎾᏛᏁᏗ ᎠᎾᏛᏁᎵᏍᎬ ''[[Unto These Hills|Unto ᎾᏍᎩ ᎯᎠ ᏗᎦᏚᏏ]]'' ᎠᏰᎲᎩ ᎭᏫᎾᏗᏢ ᏣᎳᎩ, NC).  ᎢᏧᎳ, ᎾᏍᎩ ᎯᎠ ᏚᎾᏓᏟᏌᎲ ᎨᏒᎩ ᎯᎠ ᎠᎴᏅᏙᏗ ᎾᏍᎩᎾᎢ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏊ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ ᏣᎳᎩ. ᎠᏥᏄᏉᏫᏍᎬ ᎤᎵᎮᎵᏣᏘ Thomas, ᎾᏍᎩ ᎯᎠ ᏭᏕᎵᎬᏗᏢ ᎦᏯᎴᏂ ᏣᎳᎩ ᎢᏯᏓᏛᏁᎸ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ ᏥᏄᏍᏗ ᎢᎦᏛ Thomas' ᎤᏂᎪᏗᏗ. Thomas' ᎤᏂᎪᏗᏗ ᎤᏠᏯᏍᏛᎩ ᎠᎾᏗᏒᎯᎯ, ᎠᎾᏗᏒᎯᎯ ᎠᎴ ᎤᎳᏂᎬᎬ. ᎯᎠ ᎤᏂᎪᏗᏗ mustered ᎾᎥᏂᎨᏍᏙᏗᏇ 2,000 ᎠᏂᏍᎦᏯ ᎢᏧᎳ ᏣᎳᎩ ᎠᎴ ᎤᏁᎬ ᎠᏓᎴᏂᏍᎬ, ᏓᎾᎵᎲ ᎢᎬᏱᏗᏢ ᎭᏫᎾᏗᏢ Virginia, ᎭᏢᏃ ᎤᎾᏤᎵ ᏓᎾᏟᎲ ᎪᏪᎸ ᏥᏄᏍᏛᎩ ᏙᏯᏗᏢ ᏓᏚᏓᎸ[http://www.cherokee-nc.com/history.php?Name=Will%20Thomas]. Thomas' ᎤᏂᎪᏗᏗ ᏥᏄᏍᏛᎩ ᎯᎠ ᎣᏂ ᎠᎵᎪᏒ ᏌᏊᎭ ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎤᎾᏛᏁᎸᏗ ᎯᎠ ᏓᏄᏩ ᏧᏓᏲᎯᏍᏗ ᎤᎶᏐᏅ capturing [[Waynesville, ᎦᏯᎴᏂ]] ᎾᎿ ᎠᎾᏍᎬᏘ 9, 1865. ᎤᏅᏌ ᏚᏓᏂᎸᏨ ᎠᏑᎳᎪᎢᏍᏗ ᏂᏛᎴᏅᏓ ᏓᎾᏩᏄᏁᎯ ᎾᎿ ᎯᎠ ᏄᏍᏗᏓᏅ ᎠᎴᏂᏙᎲ ᎠᎾᏓᏁᎲ ᏗᎦᏂᏴᎯ ᎢᎬᏁᎸ ᎤᎾᏤᎵ ᏗᏂᏃᎨᏂ ᎾᏍᎩᎾᎢ ᎠᏂᏃᎯᎵᏙᎲ.  ᎪᎯ, ᏔᎵ ᎬᏙᏗ [[Stand Watie|ᎦᏙᎬ ᎤᏪᏘ]] ᎤᏤᎵ ᏧᏓᏲᎯᏍᏗ ᏭᏕᎵᎬᏗᏢ ᎠᏂᏌᏙᏯᏍᎩ ᎾᎿ ᎫᏰᏉᏂ 23, 1865, ᎤᏓᏁᎸ ᎯᎠ ᏣᎳᎩ ᎯᎠ ᎤᎾᏤᎵᏛ ᎠᎴᏂᏙᎲ ᎯᎠ ᎤᏙᎯᏳ ᎣᏂ ᎤᎾᏓᏟᏌᎲ ᏧᏓᏲᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎤᎾᏛᏁᎸᏗ ᎯᎠ ᏴᏩᏁᎬ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ.
 
 [[Image:CherokeeOTSA.PNG|thumb|right|ᎡᎶᎯ ᏓᏟᎶᏍᏔᏅ  ᎯᎠ ᎡᏙᎠ-ᎢᎦ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ Tribal ᎠᏓᏃᎮᏗ ᎡᏍᎦᏂ]]
-ᎭᏫᎾᏗᏢ ᎣᎦᎳᎰᎻ, ᎯᎠ [[Dawes Act|Dawes ᎢᏯᏛᏁᎯ]] 1887 ᏧᎵᏍᏆᎵᏛ ᎦᎸᎳᏗᏢ ᎯᎠ tribal ᎦᏙᎯ alenvdidsv. ᎭᏫᎾᏗᏢ ᎯᎠ Curtis ᎢᏯᏛᏁᎯ [[1898]], ᏣᎳᎩ ᏗᏓᏱᎵᏓᏍᏗ ᎠᎴ governmental ᎢᏯᏛᏁᎵᏓᏍᏗ ᎨᏒᎩ abolished ᎾᎥᎢ ᎯᎠ ᎢᏧᎳ ᎠᏴ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏰᎵ ᎤᏙᏢᏒ. ᎾᏍᎩ ᎯᎠ ᎠᎴ ᏐᎢ ᏗᎵᏖᎸᏗ ᎨᏒᎩ ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᎤᎵᏍᏛ tribal ᏓᎳᏏᏛ ᎠᏰᏍᏛᏗ ᎯᎠ ᎦᎶᎯᏍᏗ ᎾᏍᎩᎾᎢ ᎣᎦᎳᎰᎻ Statehood ᎭᏫᎾᏗᏢ [[1907]]. ᎯᎠ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ, ᎢᏳᏓᎵᎭ ᎣᏍᏛ ᎦᏅᎯᏓ ᏰᎵᏊ ᎪᏪᎶᏗ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ. ᏱᏂᎬᏛᎾ, ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᏬᎳᏨ ᎾᏍᎩ ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ leadership ᎠᎴ ᏂᎦᎥ ᎤᏓᏂᏝᏅ ᏥᏄᏍᏛᎩ convened ᎭᏫᎾᏗᏢ [[1938]] ᎠᏑᏰᏍᏗ ᎤᎬᏫᏳᎯ. ᎤᏅᏌ ᎠᏑᏰᏍᏗ J. B. Milam ᏥᏄᏍᏗ ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ, ᎠᎴ ᏥᏄᏍᏗ ᎠᎦᎵᏯ ᏄᏍᏛ ᏗᎧᏃᏗ Franklin Delano Roosevelt ᎦᎫᏍᏛᏅᎯ ᎯᎠ ᏗᏙᎩᏯᏛ ᎭᏫᎾᏗᏢ [[1941]]. 
+ᎭᏫᎾᏗᏢ ᎣᎦᎳᎰᎻ, ᎯᎠ [[Dawes Act|Dawes ᎢᏯᏛᏁᎯ]] 1887 ᏧᎵᏍᏆᎵᏛ ᎦᎸᎳᏗᏢ ᎯᎠ tribal ᎦᏙᎯ ᎠᎴᏅᏗᏍᎬ. ᎭᏫᎾᏗᏢ ᎯᎠ Curtis ᎢᏯᏛᏁᎯ [[1898]], ᏣᎳᎩ ᏗᏓᏱᎵᏓᏍᏗ ᎠᎴ governmental ᎢᏯᏛᏁᎵᏓᏍᏗ ᎨᏒᎩ abolished ᎾᎥᎢ ᎯᎠ ᎢᏧᎳ ᎠᏴ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏰᎵ ᎤᏙᏢᏒ. ᎾᏍᎩ ᎯᎠ ᎠᎴ ᏐᎢ ᏗᎵᏖᎸᏗ ᎨᏒᎩ ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᎤᎵᏍᏛ tribal ᏓᎳᏏᏛ ᎠᏰᏍᏛᏗ ᎯᎠ ᎦᎶᎯᏍᏗ ᎾᏍᎩᎾᎢ ᎣᎦᎳᎰᎻ Statehood ᎭᏫᎾᏗᏢ [[1907]]. ᎯᎠ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ, ᎢᏳᏓᎵᎭ ᎣᏍᏛ ᎦᏅᎯᏓ ᏰᎵᏊ ᎪᏪᎶᏗ ᎧᏃᎮᏛ ᏓᏠᎯᏍᏛ. ᏱᏂᎬᏛᎾ, ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᏬᎳᏨ ᎾᏍᎩ ᎤᏚᎳᏗ ᏄᎵᏍᏔᏅ leadership ᎠᎴ ᏂᎦᎥ ᎤᏓᏂᏝᏅ ᏥᏄᏍᏛᎩ convened ᎭᏫᎾᏗᏢ 1938 ᎠᏑᏰᏍᏗ ᎤᎬᏫᏳᎯ. ᎤᏅᏌ ᎠᏑᏰᏍᏗ J. B. Milam ᏥᏄᏍᏗ ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ, ᎠᎴ ᏥᏄᏍᏗ ᎠᎦᎵᏯ ᏄᏍᏛ ᏗᎧᏃᏗ Franklin Delano Roosevelt ᎦᎫᏍᏛᏅᎯ ᎯᎠ ᏗᏙᎩᏯᏛ ᎭᏫᎾᏗᏢ 1941. 
 
-[[File:ᏣᎳᎩmap.png]]
+[[File:ᏣᎳᎩmap.png|thumb]]
+W. W. Keeler ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ 1949 ᎠᎴ ᏥᏄᏍᏗ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏠᏯᏍᏔᏅᎯ ᎯᎠ ᎣᏩᏒ-ᎤᎵᏍᏛ ᏗᎳᏏᏙᏗ, ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏥᏄᏍᏛᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᏅᎪᏢᎯᏐᏗᏱ Ꮝ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ W. W. Keeler ᏥᏄᏍᏛᎩ ᏧᏓᎩᏴᎲ ᎤᎬᏫᏳᎯ ᎾᎥᎢ ᎯᎠ ᏴᏫ, ᎾᎿ ᎢᏗᏢ ᏗᏂᎳᏫᎩ ᎢᏯᏛᏁᎯ ᎤᏬᏪᎳᏅᎩ ᎾᎥᎢ [[President Nixon|ᎤᎬᏫᏳᎯ Nixon]]. Keeler, ᎦᎪ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ᎯᎠ ᎤᎬᏫᏳᎯ Phillips ᎪᎢ ᏥᏄᏍᏛᎩ succeeded ᎾᎥᎢ Ross Swimmer, [[Wilma Mankiller]], [[Joe Byrd]], ᎠᎴ [[Chad "Corntassel" Smith|Chad ᎠᏥᏅᏏᏓᏍᏗ]] ᎦᎪ ᎨᏒᎢ ᎾᏊ ᎯᎠ ᎤᎬᏫᏳᎯ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ. 
 
-
-W. W. Keeler ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ [[1949]] ᎠᎴ ᏥᏄᏍᏗ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏠᏯᏍᏔᏅᎯ ᎯᎠ ᎣᏩᏒ-ᎤᎵᏍᏛ ᏗᎳᏏᏙᏗ, ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏥᏄᏍᏛᎩ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᏅᎪᏢᎯᏐᏗᏱ Ꮝ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ W. W. Keeler ᏥᏄᏍᏛᎩ ᏧᏓᎩᏴᎲ ᎤᎬᏫᏳᎯ ᎾᎥᎢ ᎯᎠ ᏴᏫ, ᎾᎿ ᎢᏗᏢ ᏗᏂᎳᏫᎩ ᎢᏯᏛᏁᎯ ᎤᏬᏪᎳᏅᎩ ᎾᎥᎢ [[President Nixon|ᎤᎬᏫᏳᎯ Nixon]]. Keeler, ᎦᎪ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ᎯᎠ ᎤᎬᏫᏳᎯ Phillips ᎪᎢ ᏥᏄᏍᏛᎩ succeeded ᎾᎥᎢ Ross Swimmer, [[Wilma Mankiller]], Joe Byrd ᎠᎴ [[Chad "Corntassel" Smith|Chad ᎠᏥᏅᏏᏓᏍᏗ]] ᎦᎪ ᎨᏒᎢ ᎾᏊ ᎯᎠ ᎤᎬᏫᏳᎯ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ. 
-
-ᎯᎠ ᎠᏫᏒᏗ ᎩᏚᏩ ᏗᏂᏤᎷᎯᏍᎩ ᎤᎩᏒᎩ ᏄᏓᎴᎿᎥ ᎦᏅᏅᎢ ᎬᎾᏬᏍᎬ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ ᎤᎩᏒᎩ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᎦᏎᏍᏙᏗ ᎤᎶᏐᏅ ᎯᎠ [[ᎠᏴᏫᏯ ᏅᎪᏢᎯᏐᏗᏱ ᎢᏯᏛᏁᎯ]] [[1934]]. ᎤᏅᏌ ᎠᎴ descended ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᎦᏴᎵ ᎦᏁᎳ, ᎠᎴ ᏣᎳᎩ Ꮎ ᎤᏓᏅᏒ ᏭᏕᎵᎬ ᎤᏓᎷᎸ ᎠᎲᏏᏓᏍᏗ, ᎠᎴ ᎯᎠ ᎠᏂᎳᏍᏓᎸ ᎧᏁᎦ ᎢᏯᏛᏁᏗ ᎩᏄᏙᏗ ᎩᎬ ᎢᎦᎢ ᎾᏍᎩᎾᎢ ᏕᎪᏪᎸ ᏚᎾᏙᎥ.
-“
+ᎯᎠ ᎠᏫᏒᏗ ᎩᏚᏩ ᏗᏂᏤᎷᎯᏍᎩ ᎤᎩᏒᎩ ᏄᏓᎴᎿᎥ ᎦᏅᏅᎢ ᎬᎾᏬᏍᎬ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ ᎤᎩᏒᎩ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᎦᏎᏍᏙᏗ ᎤᎶᏐᏅ ᎯᎠ [[ᎠᏴᏫᏯ ᏅᎪᏢᎯᏐᏗᏱ ᎢᏯᏛᏁᎯ]] 1934. ᎤᏅᏌ ᎠᎴ descended ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᎦᏴᎵ ᎦᏁᎳ, ᎠᎴ ᏣᎳᎩ Ꮎ ᎤᏓᏅᏒ ᏭᏕᎵᎬ ᎤᏓᎷᎸ ᎠᎲᏏᏓᏍᏗ, ᎠᎴ ᎯᎠ ᎠᏂᎳᏍᏓᎸ ᎧᏁᎦ ᎢᏯᏛᏁᏗ ᎩᏄᏙᏗ ᎩᎬ ᎢᎦᎢ ᎾᏍᎩᎾᎢ ᏕᎪᏪᎸ ᏚᎾᏙᎥ.
 
 ==ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ  ==
-[[File:Cherokee_National_Capitol.jpg|right|200px|thumb|ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏄᏍᏛ ᏗᎧᏃᏗ ᎦᏁᎸ ᎭᏫᎾᏗᏢ Tahlequah, ᎣᎦᎳᎰᎻ.]]
-ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ (ᏩᏎᎸᎯ ᏥᏄᏍᏗ "ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎣᎦᎳᎰᎻ" ᎭᏫᎾᏗᏢ Ꮝ ᎦᎫᏍᏛᏗ[http://cherokee.org/home.aspx?section=commissions&commission=CCC&ID=THdmeJ7XRJo=]) ᎭᏫᎾᏗᏢ ᎾᏞᎬ itsuwakodi ᎤᎭ excelled ᎠᎴ ᎤᎭ ugatohvsvi uprecedented ᎤᏚᏃᎯᏍᏔᏍᎧ ᎭᏫᎾᏗᏢ ᎠᎳᏏᏅᏙᏗ ᎤᏛᏏᏗᏒ, ᎢᏗᎦᏘᎭ, ᎠᎴ ᎣᏍᏛ ᎾᏍᎩᎾᎢ Ꮝ ᎠᏁᎲᎢ ᎭᏫᎾᏗᏢ ᎯᎠ leadership ᏄᎬᏫᏳᏌᏕᎩ [[ᎤᎬᏫᏳᎯ Chad ᎠᏥᏅᏏᏓᏍᏗ]], ᎬᏙᏗ ᎦᏛᎬᎢ ᏗᎦᎸᏫᏍᏓᏁᏗ, ᏧᏠᎯᏍᏗ, ᎤᏙᎯᏳ ᎾᏍᎩ ᏧᎬᏩᎶᏗ, ᎠᎴ ᏗᎦᎶᎪᏗ ᎤᎬᏩᎵ ᏧᏁᏉᏨ, ᎠᏠᏯᏍᏗᏍᎩ ᎤᏂᎪᏗᏗ ᎦᎸᎳᏗᎨᏍᏗ ᎠᏙᏢᏍᎩ casino ᎠᏥᏰᎶᎲ.  ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎨᏔᏗᏍᏗ [[ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏗᎦᎸᏫᏍᏓᏁᏗ]], ᎤᏙᎯᏳ ᎡᏆ ᎤᎵᏍᏕᎸᏗ contractor Ꮎ ᎪᏢᏗ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎭᏫᎾᏗᏢ ᎧᎸᎬᎢᏗᏢ ᎣᎦᎳᎰᎻ ᎾᏍᎩᎾᎢ ᏣᎳᎩ ᎠᏁᎲᎢ.  
+[[File:Cherokee_National_Capitol.jpg|right|200px|thumb|ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏄᏍᏛ ᏗᎧᏃᏗ ᎦᏁᎸ ᎭᏫᎾᏗᏢ [[Tahlequah|ᏔᎴᏆ]], ᎣᎦᎳᎰᎻ.]]
+ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ (ᏩᏎᎸᎯ ᏥᏄᏍᏗ "ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎣᎦᎳᎰᎻ" ᎭᏫᎾᏗᏢ Ꮝ ᎦᎫᏍᏛᏗ[http://cherokee.org/home.aspx?section=commissions&commission=CCC&ID=THdmeJ7XRJo=]) ᎭᏫᎾᏗᏢ ᎾᏞᎬ ᎢᏧᏩᎪᏗ ᎤᎭ excelled ᎠᎴ ᎤᎭ ugatohvsvi uprecedented ᎤᏚᏃᎯᏍᏔᏍᎧ ᎭᏫᎾᏗᏢ ᎠᎳᏏᏅᏙᏗ ᎤᏛᏏᏗᏒ, ᎢᏗᎦᏘᎭ, ᎠᎴ ᎣᏍᏛ ᎾᏍᎩᎾᎢ Ꮝ ᎠᏁᎲᎢ ᎭᏫᎾᏗᏢ ᎯᎠ leadership ᏄᎬᏫᏳᏌᏕᎩ [[ᎤᎬᏫᏳᎯ Chad ᎠᏥᏅᏏᏓᏍᏗ]], ᎬᏙᏗ ᎦᏛᎬᎢ ᏗᎦᎸᏫᏍᏓᏁᏗ, ᏧᏠᎯᏍᏗ, ᎤᏙᎯᏳ ᎾᏍᎩ ᏧᎬᏩᎶᏗ, ᎠᎴ ᏗᎦᎶᎪᏗ ᎤᎬᏩᎵ ᏧᏁᏉᏨ, ᎠᏠᏯᏍᏗᏍᎩ ᎤᏂᎪᏗᏗ ᎦᎸᎳᏗᎨᏍᏗ ᎠᏙᏢᏍᎩ casino ᎠᏥᏰᎶᎲ.  ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎨᏔᏗᏍᏗ [[ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏗᎦᎸᏫᏍᏓᏁᏗ]], ᎤᏙᎯᏳ ᎡᏆ ᎤᎵᏍᏕᎸᏗ contractor Ꮎ ᎪᏢᏗ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎭᏫᎾᏗᏢ ᎧᎸᎬᎢᏗᏢ ᎣᎦᎳᎰᎻ ᎾᏍᎩᎾᎢ ᏣᎳᎩ ᎠᏁᎲᎢ.  
 
 ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᎭ ᎠᏁᏍᎨᏓ ᎠᏰᎸ ᏄᏛᎿᏕᎬ clinics ᏂᎦᏅᎯᏒ ᎣᎦᎳᎰᎻ, contributed ᎾᎥ ᏄᎾᏓᎸ ᏚᏙᎳᏩᏛᎲ ᎢᏗᏛᏁᏗ, ᎠᏁᏍᎨᏓ ᎠᎾᏕᎶᏆᏍᎬ ᎬᏔᏂᏓᏍᏗ ᎠᎴ universities ᎾᏍᎩᎾᎢ Ꮝ ᎠᏁᎲᎢ, instilled ᎯᎠ ᎠᎵᏏᎾᎯᏍᏙᏗ [[Gadugi]] ᎠᎴ ᎣᏩᏒ-utugi gvsv ᎭᏫᎾᏗᏢ Ꮝ ᎠᏁᎲᎢ, revitalized ᎦᏬᏂᎯᏍᏗ ᎠᏂᎧᏅᏍᎬ ᎢᏗᏛᏁᏗ ᎾᏍᎩᎾᎢ Ꮝ ᏗᏂᏲᎵ ᎠᎴ ᎠᏛᏍᎩ, ᎠᎴ ᎨᏒᎢ ᎤᎳᏂᎩᏛ ᎠᎴ ᎤᏙᎯᏳ ᎠᎳᏏᏅᏙᏗ ᎠᎴ ᎠᏙᏱᏯᏛ ᎠᎬᏩᎵ ᎦᏌᏙᏯᏍᏗ ᎭᏫᎾᏗᏢ ᎧᎸᎬᎢᏗᏢ ᎣᎦᎳᎰᎻ.  
 
 ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏓᏩᏛᎯᏙᎯ ᎬᎾᏕᎾ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏂᎨᏒᎾ ᎢᎦ ᎭᏫᎾᏗᏢ ᎢᎬᏱ ᏚᎵᏍᏗ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ ᎠᎴ 80,000 90,000 ᏣᎳᎩ ᎠᏁᎲᎢ ᎡᏙᎵᏙᎲ Tahlequah, ᎣᎦᎳᎰᎻ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ ᎾᏍᎩᎾᎢ ᎯᎠ festivities.  ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎾᏍᎩ ᎾᏍᏇ ᏕᎦᏃᏣᎸᏍᎦ ᎯᎠ [[ᏣᎳᎩ ᏧᎴᎯᏌᏅᎯ]], tribal newspapers ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎠᏂᎩᏍᏔᏅ ᎦᏌᏆᎸ ᎣᏂ ᏧᏩᎫᏛ 1828, ᎠᎴ ᏕᎦᏃᏣᎸᏍᎦ ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎩᎵᏏ ᎠᎴ ᎯᎠ ᏍᏏᏆᏱ Syllabary.  ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏓᏩᏛᎯᏙᎯ ᎠᎴ ᎪᎯᏳᏙ ᏄᏍᏛ ᏗᎧᏃᏗ ᎠᏓᎴᏂᏍᎬ ᎡᎯᏍᏛ ᎬᏙᏗ ᎯᎠ ᎠᏂᏙᎾᎥ ᏣᎳᎩ ᎥᎦᏔᎲᎢ, ᎠᏠᏯᏍᏗᏍᎩ ᎯᎠ [[Cherokee Heritage Center|ᏣᎳᎩ ᎤᏩᎫᏗᏗᏒ ᎠᏰᎵ]] ᎦᏙ ᎤᏍᏗ ᎠᏓᏩᏛᎯᏙᎯ ᏗᏟᎶᏍᏔᏅ ᎯᎸᎯᏳᎢ ᏣᎳᎩ ᎤᏍᏗ ᎦᏚᎲ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᏍᏚᎢᏛ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ.  ᎯᎠ ᏣᎳᎩ ᎤᏩᎫᏗᏗᏒ ᎠᏰᎵ ᎤᎭ ᎤᏂᎪᏗᏗ ᎤᏓᏂᏝᏅ ᎬᏂᎨᏒ ᏂᎬᏅ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎠᏍᏚᎢᏛ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ.
 
-ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎾᏍᎩ ᎾᏍᏇ ᎠᎵᏍᏕᎸᏗ ᎯᎠ Sundance ᎠᎴ ᏣᎳᎩ ᏫᏚᏳᎪᏛ ᏓᎾᎵᏍᏓᏴᎲᏍᎬ ᎭᏫᎾᏗᏢ Tahlequah, ᎣᎦᎳᎰᎻ ᎠᎴ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎦᏚᎲᎢ, Utah, ᎠᎴ ᏓᏓᏁᎳᏁ ᎢᏗᏛᏁᏗ ᎠᎴ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ᎾᏍᎩᎾᎢ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᏫᏚᏳᎪᏛ ᎪᏪᎵ Ꭺgoweli gowlisgi particpate ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏌᎳᏙᏗ ᏗᏟᎶᏍᏔᏅ ᏗᎦᎸᏫᏍᏓᏁᏗ.  ᎤᎪᏗᏗ ᏗᎦᏃᏣᎵ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏛᏁᎵᏍᎩ ᎠᎴ ᎠᏁᎳ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ, ᏯᏛᎿ ᏥᏄᏍᏗ [[ᏪᏌ ᏎᏚᏗ]].
+ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎾᏍᎩ ᎾᏍᏇ ᎠᎵᏍᏕᎸᏗ ᎯᎠ Sundance ᎠᎴ ᏣᎳᎩ ᏫᏚᏳᎪᏛ ᏓᎾᎵᏍᏓᏴᎲᏍᎬ ᎭᏫᎾᏗᏢ Tahlequah, ᎣᎦᎳᎰᎻ ᎠᎴ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎦᏚᎲᎢ, Utah, ᎠᎴ ᏓᏓᏁᎳᏁ ᎢᏗᏛᏁᏗ ᎠᎴ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ᎾᏍᎩᎾᎢ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᏫᏚᏳᎪᏛ ᎪᏪᎵ ᎠᏪᎵ ᎪᏪᎵᏍᏗ participate ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏌᎳᏙᏗ ᏗᏟᎶᏍᏔᏅ ᏗᎦᎸᏫᏍᏓᏁᏗ.  ᎤᎪᏗᏗ ᏗᎦᏃᏣᎵ ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏛᏁᎵᏍᎩ ᎠᎴ ᎠᏁᎳ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ, ᏯᏛᎿ ᏥᏄᏍᏗ [[ᏪᏌ ᏎᏚᏗ]].
 
 ===ᎯᎠ ᏄᏍᏗᏓᏅ===
 
@@ -122,15 +119,15 @@ W. W. Keeler ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ [[1949
 
 ===ᏣᎳᎩ Freedmen ᎠᏁᎳ ᎤᎾᏓᏡᎬ Controversies===
 [[Image:CNSeal.jpg|left]]
-ᎾᎿ ᎠᎾᏱᎵᏒ 7, 2006, ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏚᏃᏣᎳᏅ Ꮎ ᎯᎠ ᏣᎳᎩ Freedmen, ᎯᎠ ᎤᎶᏒᎩ African ᏴᏩᏁᎬ ᎦᎪ ᎨᏒᎩ ᎠᏁᎲᎢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ ᎦᎪ ᎨᏒᎩ ᎠᏠᏯᏍᏔᏅᎯ ᎾᎾᎯ ᎯᎠ ᎠᏂᎳᏍᏓᎸ ᎤᎶᏐᏅ ᎯᎠ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ, ᎠᎴ ᎾᏊ ᏰᎵ ᎢᎦᏘ ᎾᏍᎩᎾᎢ ᎠᏁᎳ ᎤᎾᏓᏡᎬ ᏥᏄᏍᏗ ᏣᎳᎩ ᎠᏁᎲᎢ ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᎨᏒᎩ classified ᎾᎥᎢ ᎯᎠ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏰᎵ ᎤᏙᏢᏒ ᏥᏄᏍᏗ ᎠᏂᏴᏫ ᎾᎥᎢ ᎠᎴᏂᏙᎲ ᎤᏴᎸᎩ ᎾᎿ ᎯᎠ Dawes ᎠᏂᎧᎻᏏᏂ ᏗᎦᏙᎯ ᏗᏲᏛᎯ ᎾᎯᏳᎨᏒ ᎯᎠ ᎢᎬᏱ 1900s [http://www.cherokee.org/docs/news/Freedman-Decision.pdf].  ᎯᎠ ᏣᎳᎩ ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ itsuwakodi ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᎧᏃᏗᎢ ᎠᏏᏴᏫ ᎤᏤᎵ ᏧᎾᏓᎴᏅᏓ ᏴᏫ ᏥᏄᏍᏗ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎠᏑᏰᏛ ᎾᎾᎯ ᏣᎳᎩ ᎤᎾᏙᏢᎯ, ᎠᎴ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ viewed ᎯᎠ ᏣᎳᎩ ᎤᎾᏙᏢᎯ ᏥᏄᏍᏗ ᎠᏙᏱᏯᏛ ᎠᎬᏩᎵ ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ racially ᏚᎳᏏᏔᏅᎩ ᎤᎾᏙᏢᎯ.  ᎯᎠ ᏣᎳᎩ Freedmen, ᎤᏍᏆᎸᎲ ᏨᏓᏓᏨᏍᏙᏗ ᎬᏙᏗ ᎯᎠ ᏣᎳᎩ, ᎠᎴ ᎾᏍᎩᎾᎢ ᎯᎠ ᎡᏆ ᎤᏂᎪᏗᏗ ᎾᏍᎩ ᎾᏍᏇ ᏣᎳᎩ ᎩᎬ ᎠᎴ ᎦᏌᏆᎸ.  ᎾᎿᎢ ᎠᎴ ᎤᎪᏗᏗ ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒᎯ ᎠᏏᎾᏒᎢ ᏣᎳᎩ ᎠᏥᏅᏏᏓᏍᏗ Freedmen ᎠᎦᏲᎳᏗᏍᏗ ᎦᎪ ᎾᏊ ᎠᏁᎳᏗᏍᏗ ᎭᏫᏂᏗᏢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ.  ᎯᎠ ᏣᎳᎩ Freedmen ᎠᎩᎵᏲᏨ ᎤᎪᏗᏗ ᎯᎠ ᎤᏠᏱ ᎤᏐᏅᎢ ᏥᏄᏍᏗ ᏐᎢ ᎠᏴᏫᏯ ᏚᎾᏓᏟᏌᎲ ᎢᎬᏂᏏᏍᎩ ᎤᎾᏤᎵ ᏣᎳᎩ Citizenship ᎾᎾᎢ ᎯᎠ ᎠᎦᏔᎲᏍᏗ ᎯᎠ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎠᎴ ᎨᏒᎩ viewed ᎾᎥᎢ ᎯᎠ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏰᎵ ᎤᏙᏢᏒ ᏥᏄᏍᏗ ᎠᏂᏴᏫ, ᎦᏙ ᎤᏍᏗ ᎤᏗᏅᏒᎩ ᎯᎠ freedmen ᎠᎴᏂᏙᎲ nanahwunvgi ᎾᎿ ᎯᎠ Dawes ᎠᏂᎧᎻᏏᏂ ᏗᏲᏛᎯ ᏥᏄᏍᏗ ᏣᎳᎩ ᎠᏁᎲᎢ ᎾᎯᏳᎨᏒ ᎯᎠ ᎢᎬᏱ 1900'.
+ᎾᎿ ᎠᎾᏱᎵᏒ 7, 2006, ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏚᏃᏣᎳᏅ Ꮎ ᎯᎠ ᏣᎳᎩ Freedmen, ᎯᎠ ᎤᎶᏒᎩ African ᏴᏩᏁᎬ ᎦᎪ ᎨᏒᎩ ᎠᏁᎲᎢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ ᎦᎪ ᎨᏒᎩ ᎠᏠᏯᏍᏔᏅᎯ ᎾᎾᎯ ᎯᎠ ᎠᏂᎳᏍᏓᎸ ᎤᎶᏐᏅ ᎯᎠ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ, ᎠᎴ ᎾᏊ ᏰᎵ ᎢᎦᏘ ᎾᏍᎩᎾᎢ ᎠᏁᎳ ᎤᎾᏓᏡᎬ ᏥᏄᏍᏗ ᏣᎳᎩ ᎠᏁᎲᎢ ᎢᎬᏂᏏᏍᎩ ᎤᏅᏌ ᎨᏒᎩ classified ᎾᎥᎢ ᎯᎠ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏰᎵ ᎤᏙᏢᏒ ᏥᏄᏍᏗ ᎠᏂᏴᏫ ᎾᎥᎢ ᎠᎴᏂᏙᎲ ᎤᏴᎸᎩ ᎾᎿ ᎯᎠ Dawes ᎠᏂᎧᎻᏏᏂ ᏗᎦᏙᎯ ᏗᏲᏛᎯ ᎾᎯᏳᎨᏒ ᎯᎠ ᎢᎬᏱ 1900s [http://www.cherokee.org/docs/news/Freedman-Decision.pdf].  ᎯᎠ ᏣᎳᎩ ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ ᎢᏧᏩᎪᏗ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᎧᏃᏗᎢ ᎠᏏᏴᏫ ᎤᏤᎵ ᏧᎾᏓᎴᏅᏓ ᏴᏫ ᏥᏄᏍᏗ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎠᏑᏰᏛ ᎾᎾᎯ ᏣᎳᎩ ᎤᎾᏙᏢᎯ, ᎠᎴ ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ viewed ᎯᎠ ᏣᎳᎩ ᎤᎾᏙᏢᎯ ᏥᏄᏍᏗ ᎠᏙᏱᏯᏛ ᎠᎬᏩᎵ ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ racially ᏚᎳᏏᏔᏅᎩ ᎤᎾᏙᏢᎯ.  ᎯᎠ ᏣᎳᎩ Freedmen, ᎤᏍᏆᎸᎲ ᏨᏓᏓᏨᏍᏙᏗ ᎬᏙᏗ ᎯᎠ ᏣᎳᎩ, ᎠᎴ ᎾᏍᎩᎾᎢ ᎯᎠ ᎡᏆ ᎤᏂᎪᏗᏗ ᎾᏍᎩ ᎾᏍᏇ ᏣᎳᎩ ᎩᎬ ᎠᎴ ᎦᏌᏆᎸ.  ᎾᎿᎢ ᎠᎴ ᎤᎪᏗᏗ ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒᎯ ᎠᏏᎾᏒᎢ ᏣᎳᎩ ᎠᏥᏅᏏᏓᏍᏗ Freedmen ᎠᎦᏲᎳᏗᏍᏗ ᎦᎪ ᎾᏊ ᎠᏁᎳᏗᏍᏗ ᎭᏫᏂᏗᏢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ.  ᎯᎠ ᏣᎳᎩ Freedmen ᎠᎩᎵᏲᏨ ᎤᎪᏗᏗ ᎯᎠ ᎤᏠᏱ ᎤᏐᏅᎢ ᏥᏄᏍᏗ ᏐᎢ ᎠᏴᏫᏯ ᏚᎾᏓᏟᏌᎲ ᎢᎬᏂᏏᏍᎩ ᎤᎾᏤᎵ ᏣᎳᎩ Citizenship ᎾᎾᎢ ᎯᎠ ᎠᎦᏔᎲᏍᏗ ᎯᎠ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ ᎠᎴ ᎨᏒᎩ viewed ᎾᎥᎢ ᎯᎠ ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏰᎵ ᎤᏙᏢᏒ ᏥᏄᏍᏗ ᎠᏂᏴᏫ, ᎦᏙ ᎤᏍᏗ ᎤᏗᏅᏒᎩ ᎯᎠ freedmen ᎠᎴᏂᏙᎲ ᎾᎿᏭᏅᎩ ᎾᎿ ᎯᎠ Dawes ᎠᏂᎧᎻᏏᏂ ᏗᏲᏛᎯ ᏥᏄᏍᏗ ᏣᎳᎩ ᎠᏁᎲᎢ ᎾᎯᏳᎨᏒ ᎯᎠ ᎢᎬᏱ 1900'.
 
 ᎤᎪᏗᏗ ᏣᎳᎩ traditionalists ᎤᎭ ᏚᎦᏘᎸᏒ ᎠᎵᏍᎪᎳᏗᏍᎩ tribal ᎠᏁᎳ ᎤᎾᏓᏡᎬ ᎯᎠ Freedmen; ᏱᏂᎬᏛᎾ, ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎾᏍᎩ ᎾᏍᏇ ᎠᎵᏍᎪᎸᏙᏗ ᎠᏁᎳ ᎤᎾᏓᏡᎬ ᎠᏂᏴᏫ Delaware ᎩᎬ ᏚᎳᏏᏔᏅᎩ ᎾᏍᎩ ᏧᏩᎫᏔᏅ treaties ᎠᎴ ᏓᏓᏁᏤᎸ ᎬᏙᏗ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ.  ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏭᏔᏅᎢ ᏧᎾᏓᏱᎵᏓᏍᏗ ᎤᏬᎳᏨ ᎯᎠ ᏧᏓᎴᎿᎢ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎯᎠ Freedmen ᎭᏫᎾᏗᏢ ᏣᎳᎩ ᎧᏃᎮᏍᎩ ᎠᎴ ᎯᎠ ᎠᏂᏔᎵ ᎾᎾᏛᏁᎲ ᎤᏐᏅᎢ ᎠᎴ ᏧᏣᏔᏊ ᎤᎦᏙᎲᏒ ᎬᏙᏗ ᎯᎠ ᏣᎳᎩ ᏴᏫ ᎾᎯᏳᎨᏒ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-ᎣᎦᎳᎰᎻ Statehood ᎭᏫᎾᏗᏢ ᏩᏎᏍᏗ ᎾᎿ Ꮝ ᏧᏚᎪᏔᏅ, ᎠᎴ upheld ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎦᎫᏍᏛᏗ ᎠᏚᏓᎸᏗ ᎢᏗᎦᏗ ᏂᏚᏳᎪᏛ ᎾᏍᎩᎾᎢ ᏂᎦᏛ ᏣᎳᎩ ᎠᏂᏴᏫ.
 
-ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏝᏱᎪᎯᎩ ᏚᏃᏣᎳᏅ Ꮎ ᎤᏍᏆᎸᎲ ᎠᏯᏙᎯᎲ ᎤᏛᎯᏍᏔᏅᎩ ᎾᎥᎢ ᎯᎠ ᏣᎳᎩ ᏴᏫ Ꮎ ᎯᎠ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎾᎿ ᎯᎠ ᎠᏁᎳ ᎤᎾᏓᏡᎬ ᎯᎠ Freedmen ᏥᏄᏍᏛᎩ ᎾᏊ ᎠᎴᏂᏙᎲ ᎠᎦᏎᏍᏔᏅ ᎾᏍᎩᎾᎢ ᎠᏓᏑᏰᏍᎬ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎧᏁᎢᏍᏔᏅ ammendments ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎦᎫᏍᏛᏗ.  ᎾᏍᎩ ᎯᎠ ᎪᏢᎯᏌᏅᎯ ᎠᎴ ᏄᏪᎵᏒ ᎠᏓᏍᏚᏁᏗ tribal ᎠᏁᎳ ᎤᎾᏓᏡᎬ ᎠᏍᏓᏩᏛᏍᏗ ᎢᏯᏛᏁᏗ ᏣᎳᎩ ᎤᏤᎵ ᎾᎥᎢ ᎩᎬ ᎠᎦᏲᎳᏗᏍᏗ ᎠᎴ ᎬᏫᏍᏓᏗ ᎯᎠ Freedman ᏂᏛᎴᏅᏓ Tribal ᎠᏁᎳ ᎤᎾᏓᏡᎬ.<ref>[[http://www.cherokee.org/home.aspx?section=chief&ID=/aoDJcgHYwk=]]</ref> ᎾᏊ, ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎦᎫᏍᏛᏗ  ᎠᏓᏍᏚᏁᏗ ᎦᎪ ᎠᎾᏍᎬᏘ ᎠᎴ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏯᏓᏛᏁᏗ ᏥᏄᏍᏗ ᏧᏓᎩᏴᎲ ᎠᏰᎵ ᎤᏒᎧᎵ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩ ᎠᏂᏏᏴᏫᎭ ᎦᎪ ᎠᎴ ᏣᎳᎩ ᎩᎬ.  ᎢᎦᏛ ᏣᎳᎩ traditionalists ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏓᏲᏔᎡᏗ ᎯᎠ ᏫᏓᎧᏃᏗᏱ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏭᏔᏅᎢ ᏧᎾᏓᏱᎵᏓᏍᏗ Ꮎ ᎯᎠ Freedman ᎠᏂᏁᏉᎬ contributed ᏣᎳᎩ ᎥᎦᏔᎲᎢ ᎠᎴ ᎤᎾᏙᏢᎯ ᎭᏫᎾᏗᏢ ᎪᎯᏊ ᎢᏴ ᏥᎩ itsuwakodi, ᎠᎴ ᏗᎦᏘᎸᏍᏗ ᎠᎵᏍᎪᎳᏗᏍᎩ ᎯᎠ Freedmen ᎠᏁᎳ ᎤᎾᏓᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ.  ᏐᎢ traditionalists ᎤᎭ asserted Ꮎ Freedmen ᎤᎭ ᎤᎵᏍᎨᏛ ᎠᎴ ᏚᏳᎪᏛ ᎾᎿᎢ ᎭᏫᎾᏗᏢ ᎯᎠ CN.
+ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏝᏱᎪᎯᎩ ᏚᏃᏣᎳᏅ Ꮎ ᎤᏍᏆᎸᎲ ᎠᏯᏙᎯᎲ ᎤᏛᎯᏍᏔᏅᎩ ᎾᎥᎢ ᎯᎠ ᏣᎳᎩ ᏴᏫ Ꮎ ᎯᎠ ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎾᎿ ᎯᎠ ᎠᏁᎳ ᎤᎾᏓᏡᎬ ᎯᎠ Freedmen ᏥᏄᏍᏛᎩ ᎾᏊ ᎠᎴᏂᏙᎲ ᎠᎦᏎᏍᏔᏅ ᎾᏍᎩᎾᎢ ᎠᏓᏑᏰᏍᎬ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎧᏁᎢᏍᏔᏅ amendments ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎦᎫᏍᏛᏗ.  ᎾᏍᎩ ᎯᎠ ᎪᏢᎯᏌᏅᎯ ᎠᎴ ᏄᏪᎵᏒ ᎠᏓᏍᏚᏁᏗ tribal ᎠᏁᎳ ᎤᎾᏓᏡᎬ ᎠᏍᏓᏩᏛᏍᏗ ᎢᏯᏛᏁᏗ ᏣᎳᎩ ᎤᏤᎵ ᎾᎥᎢ ᎩᎬ ᎠᎦᏲᎳᏗᏍᏗ ᎠᎴ ᎬᏫᏍᏓᏗ ᎯᎠ Freedman ᏂᏛᎴᏅᏓ Tribal ᎠᏁᎳ ᎤᎾᏓᏡᎬ.<ref>[[http://www.cherokee.org/home.aspx?section=chief&ID=/aoDJcgHYwk=]]</ref> ᎾᏊ, ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎦᎫᏍᏛᏗ  ᎠᏓᏍᏚᏁᏗ ᎦᎪ ᎠᎾᏍᎬᏘ ᎠᎴ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏯᏓᏛᏁᏗ ᏥᏄᏍᏗ ᏧᏓᎩᏴᎲ ᎠᏰᎵ ᎤᏒᎧᎵ ᎾᏍᎩ ᎤᏩᏒ ᎾᏍᎩ ᎠᏂᏏᏴᏫᎭ ᎦᎪ ᎠᎴ ᏣᎳᎩ ᎩᎬ.  ᎢᎦᏛ ᏣᎳᎩ traditionalists ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏓᏲᏔᎡᏗ ᎯᎠ ᏫᏓᎧᏃᏗᏱ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏭᏔᏅᎢ ᏧᎾᏓᏱᎵᏓᏍᏗ Ꮎ ᎯᎠ Freedman ᎠᏂᏁᏉᎬ contributed ᏣᎳᎩ ᎥᎦᏔᎲᎢ ᎠᎴ ᎤᎾᏙᏢᎯ ᎭᏫᎾᏗᏢ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎢᏧᏩᎪᏗ, ᎠᎴ ᏗᎦᏘᎸᏍᏗ ᎠᎵᏍᎪᎳᏗᏍᎩ ᎯᎠ Freedmen ᎠᏁᎳ ᎤᎾᏓᏡᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ.  ᏐᎢ traditionalists ᎤᎭ asserted Ꮎ Freedmen ᎤᎭ ᎤᎵᏍᎨᏛ ᎠᎴ ᏚᏳᎪᏛ ᎾᎿᎢ ᎭᏫᎾᏗᏢ ᎯᎠ CN.
 
 ===ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ ᏗᏂᏤᎷᎯᏍᎩ ᏓᏓᎳᏑᎸ ᎠᎴ ᏂᏓᏙᎳᎬᎾ ᎬᏙᏗ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ===
 [[Image:UKBflag2.png|right|200px]]
-ᎯᎠ [[ᎠᏫᏒᏗ ᎠᏂᎩᏚᏩᎩ ᏗᏂᏤᎷᎯᏍᎩ  ᏣᎳᎩ ᎠᏂᏴᏫ]], ᎾᏍᎩ ᎾᏍᏇ ᏩᏎᎸᎯ ᏥᏄᏍᏗ ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]], ᎤᎭ ᎠᏤᎯᏐᏗᏱ sued ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏔᏲᏍᏗ ᎯᎠ ceding tribal ᎦᏙᎯ ᎢᎦᏛ ᎠᎴ ᎠᏕᎳ ᎤᏓᏍᏛᏗᏍᏗ ᎦᏬᎯᎸᏙᏗ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎠᏯᏙᎯᎲ. ᏂᎦᏛ ᎾᏍᎩ ᎯᎠ ᏓᏓᎳᏑᎸ ᎤᎭ unulvngi ᎠᎴ ᏭᏪᏙᎢ dismissed. ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎾᏍᎩ ᎾᏍᏇ ᏝᏱᎪᎯᎩ sued ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎾᏍᎩᎾᎢ ᎠᏓᏲᏔᎡᏗ HR ᎠᏎᎯᎯ ᎢᎦ asehihi iga adatugv 3534, ᎠᏎᎯᎯ ᎢᎦ asehihi iga adatugv Ꮎ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎣᎦᎳᎰᎻ ᎠᎴ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎥᏓᏓᎫᏴᎡᏗᏱ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ ᏥᏄᏍᏛᎩ ᎡᎯᏍᏛ ᎬᏙᏗ ᎯᎠ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ ᎥᏳᎩ ᎯᎠ ᏲᏩᏁᎬ Riverbed ᎾᎥᎢ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎣᎦᎳᎰᎻ ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏁᏓᏍᏗ ᎬᏙᏗ ᏗᎦᏙᎯ ᎠᎴ hydroelectric ᎤᎳᏂᎬᎬ ᎤᎾᏁᎶᏔᏅ. ᎯᎠ ᏓᏓᎳᏑᎸ utlnvgi ᎾᎥᎢ ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎠᏔᏲᏍᏗ ᏚᎵᎬᏩᎳᏂᏙᎸ ᏂᏛᎴᏅᏓ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏂᏛᎴᏅᏓ HR ᎠᏎᎯᎯ ᎢᎦ ᎠᏓ asehihi iga adatugv 3534 ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ruled ᎾᏍᏋ ᎤᎾᎵᎪᏒ ᎠᎴ ᏄᏠᏯᏍᏛᎾ ᏄᏍᏛ. ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎣᎦᎳᎰᎻ ᏓᏓᎳᏑᎸ ᎾᏍᎩ ᎤᏃᏜᎩ ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎤᏤᎵ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ casino ᎠᏥᏰᎶᎲ (ᎠᎪᏩᏛᏗ [[ᎠᏫᏒᏗ ᎠᏂᎩᏚᏩᎩ ᏗᏂᏤᎷᎯᏍᎩ  ᏣᎳᎩ ᎠᏂᏴᏫ]] ᎾᏍᎩᎾᎢ ᎤᏟ ᎢᎦᎢ ᎠᏓᏃᎯᏎᏗ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎣᎦᎳᎰᎻ ᏗᎦᎸᏫᏍᏓᏁᏗ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎾᏍᎩᎾᎢ ᎠᏂᎩᏍᏗᏍᎬ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ casinos), ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎠᏏᏇ sued ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏔᏲᏍᏗ ᎠᎴᏫᏍᏙᏗ tribal ᎦᏙᎯ ᎢᎦᏛ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ casinos. ᎾᏍᎩ ᎯᎠ ᏓᏓᎳᏑᎸ ᎨᏒᎩ ᎾᏍᎩ ᎾᏍᏇ dismissed, ᎠᎴ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ruled [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎯᎠ ᎦᏂᏓᏛ ᏚᏳᎪᏛ ᎯᎠ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᎯᎠ ᏣᎳᎩ ᏴᏫ.
+ᎯᎠ [[ᎠᏫᏒᏗ ᎠᏂᎩᏚᏩᎩ ᏗᏂᏤᎷᎯᏍᎩ  ᏣᎳᎩ ᎠᏂᏴᏫ]], ᎾᏍᎩ ᎾᏍᏇ ᏩᏎᎸᎯ ᏥᏄᏍᏗ ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]], ᎤᎭ ᎠᏤᎯᏐᏗᏱ sued ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏔᏲᏍᏗ ᎯᎠ ceding tribal ᎦᏙᎯ ᎢᎦᏛ ᎠᎴ ᎠᏕᎳ ᎤᏓᏍᏛᏗᏍᏗ ᎦᏬᎯᎸᏙᏗ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎠᏯᏙᎯᎲ. ᏂᎦᏛ ᎾᏍᎩ ᎯᎠ ᏓᏓᎳᏑᎸ ᎤᎭ ᎤᏄᎸᏅᎩ ᎠᎴ ᏭᏪᏙᎢ dismissed. ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎾᏍᎩ ᎾᏍᏇ ᏝᏱᎪᎯᎩ sued ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎾᏍᎩᎾᎢ ᎠᏓᏲᏔᎡᏗ HR ᎠᏎᎯᎯ ᎢᎦ ᎠᏎᎯᎯ ᎢᎦ ᎠᏓᏚᎬ 3534, ᎠᏎᎯᎯ ᎢᎦ ᎠᏎᎯᎯ ᎢᎦ ᎠᏓᏚᎬ Ꮎ ᎧᏁᏨ ᎢᏯᏛᏁᏗ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎣᎦᎳᎰᎻ ᎠᎴ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎥᏓᏓᎫᏴᎡᏗᏱ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎴ ᏥᏄᏍᏛᎩ ᎡᎯᏍᏛ ᎬᏙᏗ ᎯᎠ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ ᎥᏳᎩ ᎯᎠ ᏲᏩᏁᎬ Riverbed ᎾᎥᎢ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎣᎦᎳᎰᎻ ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏁᏓᏍᏗ ᎬᏙᏗ ᏗᎦᏙᎯ ᎠᎴ hydroelectric ᎤᎳᏂᎬᎬ ᎤᎾᏁᎶᏔᏅ. ᎯᎠ ᏓᏓᎳᏑᎸ ᎤᏝᏅᎩ ᎾᎥᎢ ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎠᏔᏲᏍᏗ ᏚᎵᎬᏩᎳᏂᏙᎸ ᏂᏛᎴᏅᏓ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏂᏛᎴᏅᏓ HR ᎠᏎᎯᎯ ᎢᎦ ᎠᏓ ᎠᏎᎯᎯ ᎢᎦ ᎠᏓᏚᎬ 3534 ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ruled ᎾᏍᏋ ᎤᎾᎵᎪᏒ ᎠᎴ ᏄᏠᏯᏍᏛᎾ ᏄᏍᏛ. ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎣᎦᎳᎰᎻ ᏓᏓᎳᏑᎸ ᎾᏍᎩ ᎤᏃᏜᎩ ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎤᏤᎵ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ casino ᎠᏥᏰᎶᎲ (ᎠᎪᏩᏛᏗ [[ᎠᏫᏒᏗ ᎠᏂᎩᏚᏩᎩ ᏗᏂᏤᎷᎯᏍᎩ  ᏣᎳᎩ ᎠᏂᏴᏫ]] ᎾᏍᎩᎾᎢ ᎤᏟ ᎢᎦᎢ ᎠᏓᏃᎯᏎᏗ ᎾᏍᎩ ᎠᏂᏰᎸᏍᎬ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎣᎦᎳᎰᎻ ᏗᎦᎸᏫᏍᏓᏁᏗ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎾᏍᎩᎾᎢ ᎠᏂᎩᏍᏗᏍᎬ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ casinos), ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎠᏏᏇ sued ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏔᏲᏍᏗ ᎠᎴᏫᏍᏙᏗ tribal ᎦᏙᎯ ᎢᎦᏛ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ casinos. ᎾᏍᎩ ᎯᎠ ᏓᏓᎳᏑᎸ ᎨᏒᎩ ᎾᏍᎩ ᎾᏍᏇ dismissed, ᎠᎴ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ruled [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎯᎠ ᎦᏂᏓᏛ ᏚᏳᎪᏛ ᎯᎠ ᏧᎬᏩᎶᏗ ᏂᎬᎿᏅ ᎯᎠ ᏣᎳᎩ ᏴᏫ.
 
 [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎤᏟ ᎢᎦᎢ ᏝᏱᎪᎯᎩ ᎠᏰᎲᎩ ᎠᎲᏏᏓᏍᏗ ᎠᎯᎵᏒ ᏗᎦᏘᎴᎩ ᎤᎬᏫᏳᎯ Chad ᎠᏥᏅᏏᏓᏍᏗ, ᎤᎬᏫᏳᎯ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎦᎪ ᎾᏍᎩ ᎾᏍᏇ ᎠᏰᎲ ᏔᎵ ᎠᏁᎳ ᎤᎾᏓᏡᎬ ᎭᏫᎾᏗᏢ ᎢᏧᎳ ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎠᎴ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ. ᎣᏂ ᏧᏩᎫᏛ ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎤᏎᎸ ᎢᏳᎢ ᎯᎠ ᎠᎲᏏᏓᏍᏗ ᎠᎯᎵᏒ ᎾᎾᎢ ᎯᎠ ᏗᏙᎳᎩ ᎢᏳᏩᎪᏗ ᎤᏎᎸ ᎢᏳᎢ ᎾᏍᎩᎾᎢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ ᎠᏰᎵ ᎤᏙᏢᏒ ᎾᎿ ᎨᏒ ᏩᏎᏍᏗ ᎾᎥᎢ ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ ᎾᎾᎢ ᎯᎠ ᏣᎳᎩ ᎬᎾᏕᎾ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏂᎨᏒᎾ ᎢᎦ, ᎯᎠ ᏂᎦᏛ ᎠᏟᎶᏍᏗ ᏥᏄᏍᏛᎩ perceived ᏥᏄᏍᏗ ᏴᏫ ᎤᏁᏓᏍᏗ ᎦᎾᏄᎪᏨᎢ ᎾᎥᎢ ᎯᎠ ᎤᏂᎪᏗᏗ ᎯᎠ ᏣᎳᎩ ᏴᏫ ᎠᎴ garnered ᏄᎦᏎᏍᏛᎾ ᎠᎴ ᎾᎪᎯᏳᎲᏍᎬᎾ. ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᎤᏃᎮᎸᎩ ᎭᏫᎾᏗᏢ ᏗᏤᎢ ᏣᏥᏲᎯᏍᏗ Ꮎ ᎤᏅᏌ ᎨᏒᎩ ᎢᏯᏛᏁᏗ ᎯᎠ ᎠᎲᏏᏓᏍᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎠᏓᏍᏛᏗᏍᏙᏗ ᎤᎬᏫᏳᎯ Chad ᎠᏥᏅᏏᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎤᏄᎸᎲᏍᎬ ᎠᎵᏍᏕᎸᏗ ᎯᎠ ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] casino ᎾᎯᏳᎨᏒ ᎯᎠ ᎢᏳᏩᎪᏗ ᎯᎠ ᎤᏔᏂᏗ ᎦᏙᎯ ᎣᎦᎳᎰᎻ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎯᎠ [[United Keetoowah Band|ᎠᏂᎩᏚᏩᎩ ᎠᏂᏣᎳᎩ]] ᏗᏂᏤᎷᎯᏍᎩ.
 
@@ -142,7 +139,7 @@ W. W. Keeler ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ [[1949
 
 ===ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᎾᎵᏐᏈᎸᏍᎬ ᎬᏙᏗ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ===
 [[Image:Easternbandcherokeeflag.png|right|200px]]
-ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᎭ ᏚᏃᏣᎳᏅ ᎠᎴ participated ᎭᏫᎾᏗᏢ ᎤᏂᎪᏗᏗ ᎤᏫᏢ ᎢᏗᏛᏁᏗ ᎬᏙᏗ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ ᏣᎳᎩ ᎠᏂᏴᏫ ᎠᎴ ᎨᎳᏗᏓᏍᏗ ᎭᏫᎾᏗᏢ cultural ᎦᏁᏟᏴᏍᏗ ᎢᏗᏛᏁᏗ ᎠᎴ ᎤᏫᏢ Tribal ᏗᏂᎳᏫᎩ ᏓᎾᏠᏍᎦ involving councilers ᏂᏛᎴᏅᏓ ᎢᏧᎳ ᏣᎳᎩ ᎠᏂᎳᏍᏓᎸ ᎦᏙ ᎤᏍᏗ ᏗᏓᏂᏴᏗ ᎠᏯᏙᎯᎲ ᎦᏙ ᎤᏍᏗ ᎦᎸᏉᏙᏗ ᏂᎦᏛ ᎯᎠ ᏣᎳᎩ ᏴᏫ.  ᏧᏓᎴᎿᎢ ᎯᎠ [[ᎠᏫᏒᏗ ᎩᏚᏩ ᏗᏂᏤᎷᎯᏍᎩ ᏣᎳᎩ ᎠᏂᏴᏫ]] adversarial ᎠᎾᎵᏐᏈᎸᏍᎬ ᎬᏙᏗ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏰᎵ ᎯᎠ ᏄᏂᎬᏫᏳᏌᏕᎩ ᎢᏧᎳ ᎠᏂᎳᏍᏓᎸ, ᎯᎠ [[ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ  ᏣᎳᎩ ᎠᏂᏴᏫ]] ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎬᏙᏗ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏓᏁᎭ unified ᎠᏓᏅᏙ [[ᎦᏚᎩ]] ᎬᏙᏗ ᎯᎠ ᏗᏓᏘᏁᎯ ᎠᎴ ᎠᏁᎲᎢ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ.  ᎾᎿᎢ ᎠᎴ ᎦᏛᎬᎢ ᎤᏙᎯᏳ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎠᏰᎵ ᎯᎠ ᏔᎵ ᏚᎾᏓᏟᏌᎲ, ᏨᏓᏓᏨᏍᏙᏗ, ᎠᎴ ᎠᏂᏔᎵ ᎾᎾᏛᏁᎲ ᎪᎯᏳᎯ.  ᎤᎪᏗᏗ ᎢᏳᏕᏘᏴᏓ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ ᎠᏁᎳᏗᏍᏗ ᎭᏫᎾᏗᏢ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎾᎥ ᏄᎾᏓᎸ ᎠᎴ ᎠᎴ ᎦᎸᎳᏗᎨᏍᏗ ᎪᎯᏳᏅᎯ ᎾᎥᎢ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏁᎲᎢ ᏗᎦᎾᏗᎯᏍᏗ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ.  '''ᎠᎾᎩᏍᏗᎯᏳᎩ''' ᎨᏒᎢ ᏣᎳᎩ  ᎠᎴᏂᏍᎬ ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎤᎾᏛᏁᎸᏗ ᎠᏂᏔᎵ ᎾᎾᏛᏁᎲ ᎪᎯᏳᎯ ᎾᏍᎩᎾᎢ ᎢᏳᏕᏘᏴᏓ ᎯᎠ ᏣᎳᎩ ᏴᏫ ᎠᎴ ᏯᏛᎿ ᎤᎾᏛᏁᎸᏗ ᎠᏂᏔᎵ ᎾᎾᏛᏁᎲ ᎪᎯᏳᎯ ᎠᏰᎵ ᏣᎳᎩ ᎠᏁᎲᎢ.  ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏁᎲᎢ ᎠᎴ ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ ᎠᏁᎲᎢ ᎬᏂᎨᏒ ᏂᎬᏅ ᎦᎸᎳᏗ ᎢᎦᎢ ᎢᎦᏘ '''ᎠᎾᎩᏍᏗᎯᏳᎩ''' ᎠᏰᎵ ᎯᎠ ᎢᏳᏕᏘᏴᏓ ᎠᎴ ᎠᏁᎲᎢ ᎢᏧᎳ ᏚᎾᏓᏟᏌᎲ.
+ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᎭ ᏚᏃᏣᎳᏅ ᎠᎴ participated ᎭᏫᎾᏗᏢ ᎤᏂᎪᏗᏗ ᎤᏫᏢ ᎢᏗᏛᏁᏗ ᎬᏙᏗ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ ᏣᎳᎩ ᎠᏂᏴᏫ ᎠᎴ ᎨᎳᏗᏓᏍᏗ ᎭᏫᎾᏗᏢ cultural ᎦᏁᏟᏴᏍᏗ ᎢᏗᏛᏁᏗ ᎠᎴ ᎤᏫᏢ Tribal ᏗᏂᎳᏫᎩ ᏓᎾᏠᏍᎦ involving councilors ᏂᏛᎴᏅᏓ ᎢᏧᎳ ᏣᎳᎩ ᎠᏂᎳᏍᏓᎸ ᎦᏙ ᎤᏍᏗ ᏗᏓᏂᏴᏗ ᎠᏯᏙᎯᎲ ᎦᏙ ᎤᏍᏗ ᎦᎸᏉᏙᏗ ᏂᎦᏛ ᎯᎠ ᏣᎳᎩ ᏴᏫ.  ᏧᏓᎴᎿᎢ ᎯᎠ [[ᎠᏫᏒᏗ ᎩᏚᏩ ᏗᏂᏤᎷᎯᏍᎩ ᏣᎳᎩ ᎠᏂᏴᏫ]] adversarial ᎠᎾᎵᏐᏈᎸᏍᎬ ᎬᏙᏗ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏰᎵ ᎯᎠ ᏄᏂᎬᏫᏳᏌᏕᎩ ᎢᏧᎳ ᎠᏂᎳᏍᏓᎸ, ᎯᎠ [[ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ  ᏣᎳᎩ ᎠᏂᏴᏫ]] ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎬᏙᏗ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏓᏁᎭ unified ᎠᏓᏅᏙ [[ᎦᏚᎩ]] ᎬᏙᏗ ᎯᎠ ᏗᏓᏘᏁᎯ ᎠᎴ ᎠᏁᎲᎢ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ.  ᎾᎿᎢ ᎠᎴ ᎦᏛᎬᎢ ᎤᏙᎯᏳ ᎠᏥᏅᏏᏓᏍᏗ ᏧᎸᏫᏍᏓᏁᏗ ᎠᏰᎵ ᎯᎠ ᏔᎵ ᏚᎾᏓᏟᏌᎲ, ᏨᏓᏓᏨᏍᏙᏗ, ᎠᎴ ᎠᏂᏔᎵ ᎾᎾᏛᏁᎲ ᎪᎯᏳᎯ.  ᎤᎪᏗᏗ ᎢᏳᏕᏘᏴᏓ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ ᎠᏁᎳᏗᏍᏗ ᎭᏫᎾᏗᏢ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎾᎥ ᏄᎾᏓᎸ ᎠᎴ ᎠᎴ ᎦᎸᎳᏗᎨᏍᏗ ᎪᎯᏳᏅᎯ ᎾᎥᎢ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏁᎲᎢ ᏗᎦᎾᏗᎯᏍᏗ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ.  '''ᎠᎾᎩᏍᏗᎯᏳᎩ''' ᎨᏒᎢ ᏣᎳᎩ  ᎠᎴᏂᏍᎬ ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ ᎤᎾᏛᏁᎸᏗ ᎠᏂᏔᎵ ᎾᎾᏛᏁᎲ ᎪᎯᏳᎯ ᎾᏍᎩᎾᎢ ᎢᏳᏕᏘᏴᏓ ᎯᎠ ᏣᎳᎩ ᏴᏫ ᎠᎴ ᏯᏛᎿ ᎤᎾᏛᏁᎸᏗ ᎠᏂᏔᎵ ᎾᎾᏛᏁᎲ ᎪᎯᏳᎯ ᎠᏰᎵ ᏣᎳᎩ ᎠᏁᎲᎢ.  ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏁᎲᎢ ᎠᎴ ᎧᎸᎬᎢᏗᏢ ᏗᏂᏤᎷᎯᏍᎩ ᎠᏁᎲᎢ ᎬᏂᎨᏒ ᏂᎬᏅ ᎦᎸᎳᏗ ᎢᎦᎢ ᎢᎦᏘ '''ᎠᎾᎩᏍᏗᎯᏳᎩ''' ᎠᏰᎵ ᎯᎠ ᎢᏳᏕᏘᏴᏓ ᎠᎴ ᎠᏁᎲᎢ ᎢᏧᎳ ᏚᎾᏓᏟᏌᎲ.
 
 ===ᎤᎬᏫᏳᎯ Joe Byrd ᎤᏤᎵ 1997 ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ Controversies===
 ᎤᎬᏫᏳᎯ Joe Byrd, ᏧᏓᎩᏴᎲ 1995 ᏥᏄᏍᏗ ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ, ᏥᏄᏍᏛᎩ ᎾᎥᏂᎨᏍᏗ ᎤᎾᏚᏓᎸ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏲᏨᎯ ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎤᏍᏆᎸᎲ ᎠᏯᏙᎯᎲ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎤᏤᎵ ᏚᏳᎪᏛ ᎦᏙ ᎤᏍᏗ ᎾᎥᏂᎨᏍᏗ ᏓᎬᏩᎶᏛ ᎯᎠ ᎠᏂᎳᏍᏓᎸ Ꮝ ᎤᏩᎫᏗᏗᏒ ᎠᎴ ᏓᎳᏏᏛ.  ᎤᏤᎵ ᏄᏂᎬᏫᏳᏌᏕᎩ ᏥᏄᏍᏛᎩ ᏗᎨᏥᎾᏝᎢ ᎤᎶᏒᏍᏗ ᎤᏂᎦᏛᎲᏍᎩ ᎾᎥᎢ ᎯᎠ ᎢᏧᎳ ᎠᏴ ᏗᏗᏲᎯᎯ ᏂᎦᎥ ᎠᎴ ᎢᏧᎳ ᎠᏴ ᏗᎪᏪᎵᏍᎩ ᎯᎠ ᎭᏫᎾᏗᏢ ᏧᏠᎯᏍᏗ ᎧᏃᎮᎸᎯ ᏧᎾᏍᏗ, ᎦᎶᏄᎮᏛ, ᏚᏳᎪᏛ ᎢᏯᏛᏁᎸ ᏂᎨᏒᎾ wiretapping, ᎪᏪᎵ ᏫᎦᏅᏅ ᎦᎶᏄᎮᏛ, ᎠᎴ ᎤᎾᏙᏢᏅᎯ ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ ᏗᎦᏘᎴᎩ ᎯᎠ ᏣᎳᎩ ᏴᏫ. 
@@ -154,7 +151,7 @@ Joe Byrd ᏥᏄᏍᏛᎩ ᎯᎠ [[ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ  ᎯᎠ 
 == ᏗᎦᏃᏣᎵ ᏣᎳᎩ ==
 ᎾᎿᎢ ᎨᏒᎩ ᎯᎸᏍᎩ ᏗᎦᏃᏣᎵ ᏣᎳᎩ ᎭᏫᎾᏗᏢ ᏴᏩᏁᎬ ᎧᏃᎮᏍᎩ, ᎠᏠᏯᏍᏗᏍᎩ [[ᏍᏏᏆᏱ]], ᎦᎪ ᎦᎾᎬᎢ ᎯᎠ ᏣᎳᎩ ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ. ᏍᏏᏆᏱ ᎨᏒᎢ ᏌᏊ ᎦᏲᎵ ᏴᏫ ᎭᏫᎾᏗᏢ ᎧᏃᎮᏍᎩ ᎪᎷᏩᏛᏗ ᏂᎬᎢ ᎬᏔᏅᎯ [[ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ]] ᎤᎵᏍᎪᎸᏔᏅ. ᏍᏏᏆᏱ ᎥᏝ ᎤᏕᎶᏆᎥ ᎧᏁᎬ, ᎥᎪᎵᏰᏍᎬ ᎠᎴ ᎪᏪᎶᏗ ᎯᎠ ᎩᎵᏏ ᎦᏬᏂᎯᏍᏗ. [[Nancy Ward|Nancy ᎠᏥᎦᏘᏯ]] ᏥᏄᏍᏛᎩ "ᎠᏓᎨᏳᏗ ᎠᎨᏴ" ᎯᎠ ᏣᎳᎩ ᎠᎴ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎠᏙᏱᏯᏛ ᎠᎬᏩᎵ ᎠᏎᏍᏙ. 
 
-ᏗᎦᏃᏣᎵ ᏣᎳᎩ ᎠᏓᏎᎮᎮᎯ ᎠᏠᏯᏍᏛ [[Chad "ᎤᏥᏣᏔ" ᎠᏥᏅᏏᏓᏍᏗ]], [[Wilma Mankiller]] ᎠᎴ [[Ross Swimmer]]. ᎯᎠ ᏴᏩᏁᎬ ᎧᏂᎬᎾᎥ-ᏅᏯ guitarist [[Jimi Hendrix]] ᏥᏄᏍᏛᎩ ᏣᎳᎩ ᎠᎦᏲᎳᏗᏍᏗ ᎾᎿ ᎢᏗᏢ ᎤᏤᎵ ᏧᎦᏴᎵᎨ ᎤᎵᏏ, Nora ᎠᏥᎸᏍᎩ Moore. [[Oral Roberts|ᎧᏁᏨᎯ Roberts]], ᎬᏙᏗ-ᏂᏓᏙᎳᎬᎾ ᎦᎾᏄᎪᏫᏒ ᎭᏫᎾᏗᏢ ᎯᎠ 1950s ᏗᎬᏩᎶᏒ ᎯᎠ 1990s, ᎨᏒᎢ ᎠᏆᏂᏲᏍᏗ ᎠᏫᏗᏍᎬ ᎨᎳ ᎯᎠ Choctaw ᎠᏰᎵ ᎤᏙᏢᏒ ᎣᎦᎳᎰᎻ, ᎠᎴ ᎤᎪᏗᏗ ᎯᏁᎩ ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏣᎳᎩ. 
+ᏗᎦᏃᏣᎵ ᏣᎳᎩ ᎠᏓᏎᎮᎮᎯ ᎠᏠᏯᏍᏛ [[Chad "ᎤᏥᏣᏔ" ᎠᏥᏅᏏᏓᏍᏗ]], [[Wilma Mankiller]] ᎠᎴ [[Ross Swimmer]]. ᎯᎠ ᏴᏩᏁᎬ ᎧᏂᎬᎾᎥ-ᏅᏯ guitarist [[Jimi Hendrix]] ᏥᏄᏍᏛᎩ ᏣᎳᎩ ᎠᎦᏲᎳᏗᏍᏗ ᎾᎿ ᎢᏗᏢ ᎤᏤᎵ ᏧᎦᏴᎵᎨ ᎤᎵᏏ, Nora ᎠᏥᎸᏍᎩ Moore. [[Oral Roberts|ᎧᏁᏨᎯ Roberts]], ᎬᏙᏗ-ᏂᏓᏙᎳᎬᎾ ᎦᎾᏄᎪᏫᏒ ᎭᏫᎾᏗᏢ ᎯᎠ 1950s ᏗᎬᏩᎶᏒ ᎯᎠ 1990s, ᎨᏒᎢ ᎠᏆᏂᏲᏍᏗ ᎠᏫᏗᏍᎬ ᎨᎳ ᎯᎠ [[Choctaw|ᎠᏂᏣᏓ]] ᎠᏰᎵ ᎤᏙᏢᏒ ᎣᎦᎳᎰᎻ, ᎠᎴ ᎤᎪᏗᏗ ᎯᏁᎩ ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏣᎳᎩ. 
 
 ===ᎢᎦᏪᏛ ᏣᎳᎩ ᎤᎶᏒᎩ===
 *[[Attakullakulla|ᎠᏔᎫᎳᎫᎳ]] (ca. 1708—ca. 1777), [[Chota|ᏦᏔ]] ᎤᎦᏪᎤᏪ
@@ -179,22 +176,22 @@ Joe Byrd ᏥᏄᏍᏛᎩ ᎯᎠ [[ᏄᎬᏫᏳᏌᏕᎩ ᎤᎬᏫᏳᎯ  ᎯᎠ 
 *[[ᏣᎳᎩ ᎠᏯᏩᏍᏗ ᎧᏃᎯᏴᎯ]]
 *[[ᎤᏍᏗ ᎦᏅᏅ  ᏗᎦᏌᏬᏍᏗ]]
 *[[ᏣᎳᎩ ᎬᎿᎨ ᎠᏗᏔᏍᏗ]]
-*[[Stomp Dance|Stomp ᎠᎳᏍᎩᏓ]]
+*[[Stomp Dance|ᎦᏘᏲ ᎠᎵᏍᎩᏍᏗ]]
 *[[ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏓᏄᏩ ᎠᎾᎵᎯ ᎤᎾᏙᏢᎯ]]
 *[[ᎩᏚᏩ ᎤᎾᏙᏢᎯ]]
 
 ==ᏓᏓᏚᎬ ᎪᏪᎵ==
-<references />
+{{reflist}}
 
 ==ᏫᏓᏎᏄᎢ==
-* {{cite book|title=Trail of Tears: The Rise and Fall of the Cherokee Nation|author=[[John Ehle|ᎦᎳᏅᎯ Ehle]]|publisher=Anchor Books|year=1988|id=ISBN 0-385-23954-8}}
-* {{cite book|title=Mankiller: A Chief and Her People|author=[[Wilma Mankiller]], [[Michael Wallis]]|publisher=St. Martin's Griffin|year=1999|id=ISBN 0-312-20662-3}}
-* {{cite book|author=[[Deborah L. Duvall]]|title=Tahlequah: And the Cherokee Nation|publisher=Arcadia Publishing|year=2000|id=ISBN 0738507822 }}
-* {{cite book|author=[[John R. Finger|ᎦᎳᏅᎯ R. ᎦᏰᏌᏛ]]|title=Cherokee Americans: The Eastern Band of Cherokees in the Twentieth Century|publisher=University of Nebraska Press|year=1993|id=ISBN 0-803-26879-3}}
-* {{cite book|author=[[Sarah H. Hill|Sarah H. ᎦᏚᏏ]]|title=Weaving New Worlds: Southeastern Cherokee Women and Their Basketry|publisher=University of North Carolina Press|year=1997|id=ISBN 0-807-84650-3}}
-* {{cite book|author=[[Jack Kilpatrick]] and [[Anna Gritts Kilpatrick]]|title=Friends of Thunder: Folktales of the Oklahoma Cherokees|publisher=University of Oklahoma Press|year=1995|id=ISBN 0-806-12722-8}}
+* {{cite book|title=Trail of Tears: The Rise and Fall of the Cherokee Nation|author=John Ehle|publisher=Anchor Books|year=1988|id=ISBN 0-385-23954-8}}
+* {{cite book|title=Mankiller: A Chief and Her People|author=[[Wilma Mankiller]], Michael Wallis|publisher=St. Martin's Griffin|year=1999|id=ISBN 0-312-20662-3}}
+* {{cite book|author=Deborah L. Duvall|title=[[Tahlequah|ᏔᎴᏆ]] ᎠᎴ Ꮎ ᏣᎳᎩᎯ ᎠᏰᎵ.|publisher=Arcadia Publishing|year=2000|id=ISBN 0738507822 }}
+* {{cite book|author=John R. Finger|title=Cherokee Americans: The Eastern Band of Cherokees in the Twentieth Century|publisher=[[University of Nebraska Press|ᏎᎷᏱ ᏧᎾᏕᏠᏆᏍᏗᎢ ᏗᏂᎴᏴᏗᏍᎩ]]|year=1993|id=ISBN 0-803-26879-3}}
+* {{cite book|author=[[Sarah H. Hill|Sarah H. ᎦᏚᏏ]]|title=Weaving New Worlds: Southeastern Cherokee Women and Their Basketry|publisher=ᎦᏯᎴᏂ ᏧᎾᏕᏠᏆᏍᏗᎢ ᏗᏂᎴᏴᏗᏍᎩ|year=1997|id=ISBN 0-807-84650-3}}
+* {{cite book|author=[[Jack Kilpatrick]] and [[Anna Gritts Kilpatrick]]|title=Friends of Thunder: Folktales of the Oklahoma Cherokees|publisher=[[University of Oklahoma Press|ᎣᎦᎳᎰᎹ ᎦᎸᎾᏗ ᏧᎾᏕᏠᏆᏍᏗᎢ ᏗᏂᎴᏴᏗᏍᎩ]]|year=1995|id=ISBN 0-806-12722-8}}
 * {{cite book|author=[[Howard Meredith]] and [[Mary Ellen Meredith]]|title=Reflection on Cherokee Literary Expression|publisher=Edwin Mellon Press|year=2003|id=ISBN 0-773-46763-7}}
-* {{cite book|author=[[Rennard Stickland]]|title=Fire and the Spirits: Cherokee Law from Clan to Court|publisher=University of Oklahoma Press|year=1982|id=ISBN 0-806-11619-6}}
+* {{cite book|author=[[Rennard Stickland]]|title=Fire and the Spirits: Cherokee Law from Clan to Court|publisher=[[University of Oklahoma Press|ᎣᎦᎳᎰᎹ ᎦᎸᎾᏗ ᏧᎾᏕᏠᏆᏍᏗᎢ ᏗᏂᎴᏴᏗᏍᎩ]]|year=1982|id=ISBN 0-806-11619-6}}
 
 ==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
 {{commons|Cherokee}}
