--- a/ᎢᏅᏗᎾ.mw
+++ b/ᎢᏅᏗᎾ.mw
@@ -17,7 +17,7 @@
 [[File:Taj Mahal in March 2004.jpg|thumb|Ꮎ [[Taj Mahal]] [[Agra]]-Ꭿ]]
 [[File:Nandini Ghosal.jpg|thumb|Nandini Ghosal Odissi ᎦᏨᏍᏗᎠ]]
 
-'''ᎢᏅᏗᎾ''' [[country|ᏙᏱᏗᏢ ᎦᏚᎲ]] [[ᏓᎶᏂᎦᏍᏛ]]-Ꭿ. ᏂᎬᎢ 3,287,240 km<sup>2</sup>, ᎠᎴ ᎢᏅᏗᎾ ᎦᎵᏉᎩᏁᎢ ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᎶᎯ]]-Ꮒ. ᎾᏂᎥ ᏴᏫ 1,028,737,436.<ref>[http://censusindia.gov.in/Census_Data_2001/India_at_glance/popu1.aspx "ᎢᏅᏗᎾ at a glance: ᎾᏂᎥ ᏴᏫ."] ''ᎢᏅᏗᎾ ᎨᎦᏎᏍᏛ, 2001.'' ᎢᏅᏗᎾ ᎠᏰᎵ ᎤᏙᏢᏒ. (8 ᏅᏓᏕᏆ 2010)</ref> ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ ᎦᏚᎲᎢ [[New Delhi|ᎠᏤ ᏕᎵ]]. [[Mumbai]] ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ ᏧᏴᏢ ᎠᎹᏰᎵ-Ꭿ.
+'''ᎢᏅᏗᎾ''' [[country|ᏙᏱᏗᏢ ᎦᏚᎲ]] [[ᏓᎶᏂᎦᏍᏛ]]-Ꭿ. ᏂᎬᎢ 3,287,240 km<sup>2</sup>, ᎠᎴ ᎢᏅᏗᎾ ᎦᎵᏉᎩᏁᎢ ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᎶᎯ]]-Ꮒ. ᎾᏂᎥ ᏴᏫ 1,028,737,436.<ref>[http://censusindia.gov.in/Census_Data_2001/India_at_glance/popu1.aspx "ᎢᏅᏗᎾ at a glance: ᎾᏂᎥ ᏴᏫ."] ''ᎢᏅᏗᎾ ᎨᎦᏎᏍᏛ, 2001.'' ᎢᏅᏗᎾ ᎠᏰᎵ ᎤᏙᏢᏒ. (8 ᏅᏓᏕᏆ 2010)</ref> ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ ᎦᏚᎲᎢ [[New Delhi|ᎠᏤ ᏕᎵ]]. [[Mumbai]] ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ ᎢᏅᏗᎾ-Ꭿ.
 
 == ᎧᏃᎮᎭ ᎠᎴ ᎿᎾ ᎨᏒ ==
 ᎢᏅᏗᎾ ᏔᎵᏍᎪ-ᏣᏁᎳ [[states|ᎧᏃᎮᎭ]] ᎠᎴ ᎦᎵᏉᎩ ᎿᎾ ᎨᏒ ᎤᎭ.
