--- a/ᎩᎵᏏᏲ.mw
+++ b/ᎩᎵᏏᏲ.mw
@@ -3,7 +3,7 @@
 | Name = ᎡᎵᏏᎯ
 | ᎦᏓᏘ = Flag of the United Kingdom.svg
 | Coat of arms = Royal Coat of Arms of the United Kingdom.svg
-| Location = IEU-United Kingdom.svg
+| Location = British Isles United Kingdom.svg
 | size = 170px
 | Area = 243,610 km<sup>2</sup>
 | Population = 62,041,708
