-ast:, el:, hr:, hu:, it:, kv:, lt:, mhr:, mk:, roa-rup:, ru:, sw:, uk:, modify ro:

--- a/ᎦᏍᎪᏳ.mw
+++ b/ᎦᏍᎪᏳ.mw
@@ -129,7 +129,6 @@
 [[an:Anthophila]]
 [[ar:نحلة]]
 [[as:মৌমাখি]]
-[[ast:Abeya]]
 [[az:Arı]]
 [[bg:Пчели]]
 [[bjn:Wanyi]]
@@ -138,7 +137,6 @@
 [[ca:Antòfil]]
 [[cy:Gwenynen]]
 [[de:Bienen]]
-[[el:Μέλισσα]]
 [[eml:Ev]]
 [[en:Bee]]
 [[eo:Abelo]]
@@ -154,22 +152,15 @@
 [[hak:Phûng-é]]
 [[he:דבורה (חרק)]]
 [[hif:Madhmakkhi]]
-[[hr:Pčele]]
 [[ht:Abèy]]
-[[hu:Méhek]]
 [[id:Lebah]]
 [[io:Abelo]]
 [[is:Býflugur]]
-[[it:Apoidea]]
 [[ja:ハナバチ]]
 [[ka:ფუტკარი]]
 [[ko:벌 (곤충)]]
-[[kv:Мазі]]
 [[la:Anthophila]]
-[[lt:Bitiniai]]
 [[lv:Bites]]
-[[mhr:Мӱкш]]
-[[mk:Пчела]]
 [[mn:Балт зөгий]]
 [[ms:Lebah]]
 [[mt:Naħla]]
@@ -180,9 +171,7 @@
 [[oc:Abelha]]
 [[pl:Apiformes]]
 [[pt:Abelha]]
-[[ro:Albina]]
-[[roa-rup:Alghina]]
-[[ru:Пчёлы]]
+[[ro:Albină]]
 [[sh:Pčela]]
 [[simple:Bee]]
 [[sl:Čebele]]
@@ -190,12 +179,10 @@
 [[so:Shini]]
 [[sr:Пчела]]
 [[sv:Bin]]
-[[sw:Nyuki]]
 [[ta:அந்தோபிலா]]
 [[tg:Занбӯр]]
 [[th:ผึ้ง]]
 [[tr:Arı]]
-[[uk:Бджоли]]
 [[ur:مکھی]]
 [[vi:Ong]]
 [[war:Bubuyog]]
