correcting factual error

--- a/ᏒᎳᏗᏝ.mw
+++ b/ᏒᎳᏗᏝ.mw
@@ -19,7 +19,7 @@
 '''ᏒᎳᏗᏝ''' [[ᎡᏆ ᎦᏙᎯ]], [[ᏍᎦᏚᎩ]] ᎠᎴ Ꮎ ᎤᏔᏂᎢᏍᏗ [[ᎠᎽᏰᎵ]]. ᏒᎳᏗᏝ, ᏍᎦᏚᎩ, ᎠᏠᏯᏍᏗ [[Tasmania|ᏔᏍᎺᏂᎠ]] ᎠᎴ ᎯᎸᏍᏗ ᎠᏲᎵᎨ ᎠᎹᏰᎵ. 
 
 == ᎧᏃᎮᎭ ᎠᎴ ᎿᎾ ᎨᏒ ==
-ᎯᎠ ᏌᏇ ᎧᏃᎮᎭ ᎠᎴ ᏔᎵ ᎿᎾ ᎨᏒ ᎨᎾᏓ-Ꭿ.
+ᎯᎠ ᏑᏓᎵ ᎧᏃᎮᎭ ᎠᎴ ᏧᏁᎳ ᎿᎾ ᎨᏒ ᏒᎳᏗᏝ-Ꭿ.
 
 == ᎧᏃᎮᎭ ==
 # [[New South Wales|ᎠᏤ ᏧᎦᎾᏮ Wales]]
