/* ᎿᎾ ᎨᏒ */ +translations/transliterations

--- a/ᎩᎵᏏᏲ.mw
+++ b/ᎩᎵᏏᏲ.mw
@@ -29,18 +29,18 @@
 ===ᎿᎾ ᎨᏒ===
 *[[Anguilla]]
 *[[Bermuda]]
-*[[British Antarctic Territory]]
-*[[British Indian Ocean Territory]]
-*[[British Virgin Islands]]
-*[[Cayman Islands]]
-*[[Falkland Islands]]
+*[[British Antarctic Territory|ᎡᎵᏏ ᏧᏁᏍᏓᎸ ᎿᎾ ᎨᏒ]]
+*[[British Indian Ocean Territory|ᎡᎵᏏ ᏒᎳᏗᏝ ᎠᎺᏉᎯ ᎿᎾ ᎨᏒ]]
+*[[British Virgin Islands|ᎡᎵᏏ Virgin ᎯᎸᏍᎩ ᎠᎹᏰᎵ]]
+*[[Cayman Islands|Cayman ᎯᎸᏍᎩ ᎠᎹᏰᎵ]]
+*[[Falkland Islands|Falkland ᎯᎸᏍᎩ ᎠᎹᏰᎵ]]
 *[[Gibraltar]]
 *[[Montserrat]]
-*[[Saint Helena]]
+*[[Saint Helena|ᎾᏍᎦᏅᎾ ᎮᎴᎾ]]
 *[[Ascension ᎠᎴ Tristan da Cunha]]
-*[[Turks and Caicos Islands]]
-*[[Pitcairn Islands]]
-*[[South Georgia and South Sandwich Islands]]
+*[[Turks and Caicos Islands|Turks ᎠᎴ Caicos ᎯᎸᏍᎩ ᎠᎹᏰᎵ]]
+*[[Pitcairn Islands|Pitcairn ᎯᎸᏍᎩ ᎠᎹᏰᎵ]]
+*[[South Georgia and South Sandwich Islands|ᏧᎦᎾᏮᎢ ᏣᏣᎢ ᎠᎴ ᏧᎦᎾᏮᎢ ᎠᏍᏛᎭᏟ ᎯᎸᏍᎩ ᎠᎹᏰᎵ]]
 *[[Sovereign Base Areas on Cyprus]]
 
 ==ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ==
