/* ᎧᏃᎮᎭ ᎠᎴ ᎿᎾ ᎨᏒ */ +ᏍᎪᏂᏱ

--- a/ᎩᎵᏏᏲ.mw
+++ b/ᎩᎵᏏᏲ.mw
@@ -18,7 +18,7 @@
 '''ᎡᎵᏏᎯ (ᎡᎵᏏᏲ)''' [[country|ᏙᏱᏗᏢ ᎦᏚᎲ]] [[ᏳᎳᏛ]]-Ꭿ. ᏂᎬᎢ 243,610 km<sup>2</sup>. ᎾᏂᎥ ᏴᏫ 62,041,708.<ref>[http://epp.eurostat.ec.europa.eu/tgm/table.do?tab=table&language=en&pcode=tps00001&tableSelection=1&footnotes=yes&labeling=labels&plugin=1 "Total population as of 1 January."] ''Eurostat.'' (9 ᏅᏓᏕᏆ 2010)</ref> ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ ᎦᏚᎲᎢ ᎠᎴ ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ [[London]].
 
 == ᎧᏃᎮᎭ ᎠᎴ ᎿᎾ ᎨᏒ ==
-ᎡᎵᏏᎯ ᏅᎩ [[states|ᎧᏃᎮᎭ]] ᎠᎴ 14 ᎿᎾ ᎨᏒ ᎤᎭ. 
+ᎡᎵᏏᎯ ᏅᎩ [[states|ᎧᏃᎮᎭ]] ᎠᎴ 14 [[overseas|ᏍᎪᏂᏱ]] ᎿᎾ ᎨᏒ ᎤᎭ. 
 
 ===ᎧᏃᎮᎭ===
 *England
@@ -26,7 +26,7 @@
 *Scotland
 *Wales
 
-===ᎿᎾ ᎨᏒ===
+===ᏍᎪᏂᏱ ᎿᎾ ᎨᏒ===
 *[[Anguilla]]
 *[[Bermuda]]
 *[[British Antarctic Territory|ᎡᎵᏏ ᏧᏁᏍᏓᎸ ᎿᎾ ᎨᏒ]]
